--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-20 [乌克兰发射美国远程导弹后 俄罗斯誓言做出回应](/articles/voa/1010905.md)
+
+11-20 [特朗普提名对华强硬派霍华德·卢特尼克为美国商务部长](/articles/voa/1010906.md)
+
 11-20 [港府判民主派人士入狱 佩洛西与史密斯痛批“荒谬”判决](/articles/voa/1010907.md)
 
 11-20 [美国政府进入交接过渡期 美台外交官盘点双边关系进展与前景](/articles/voa/1010908.md)
@@ -596,8 +600,4 @@
 11-8 [美国起诉被控制造和分发芬太尼的一家中国化学公司及其高级成员，中国警方表示涉案者被逮捕](/articles/voa/1011203.md)
 
 11-8 [意大利对中国中化集团可能违反倍耐力公司治理规定展开调查程序](/articles/voa/1011204.md)
-
-11-8 [俄罗斯驻港总领事吁加强港俄关系 香港角色由左右逢缘变左右为难](/articles/voa/1011205.md)
-
-11-8 [德国逮捕一名涉嫌向中国提供军事情报的美国公民](/articles/voa/1011206.md)
 
