--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-20 [G20峰会：各国寻求与中国稳定关系，但暗流涌动](/articles/nyt/1042190.md)
+
 11-20 [对俄罗斯来说，核武器是最终的谈判筹码](/articles/nyt/1042191.md)
 
 11-20 [中国温室气体排放量飙升颠覆全球气候政治](/articles/nyt/1042192.md)
@@ -598,6 +600,4 @@
 8-12 [美国寻求加强对华芯片限制，但需要先说服盟友和科技行业](/articles/nyt/1042488.md)
 
 8-12 [中国体育的“举国体制”改变了吗？](/articles/nyt/1042489.md)
-
-8-12 [沃尔兹，“中国人民的老朋友”还是对华鹰派？](/articles/nyt/1042490.md)
 
