--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-20 [黎智英首次出庭作证，否认鼓吹“港独”](/articles/nyt/1042189.md)
+
 11-20 [G20峰会：各国寻求与中国稳定关系，但暗流涌动](/articles/nyt/1042190.md)
 
 11-20 [对俄罗斯来说，核武器是最终的谈判筹码](/articles/nyt/1042191.md)
@@ -598,6 +600,4 @@
 8-12 [体育如何避开政治的刀光剑影？奥林匹克永恒的难题](/articles/nyt/1042487.md)
 
 8-12 [美国寻求加强对华芯片限制，但需要先说服盟友和科技行业](/articles/nyt/1042488.md)
-
-8-12 [中国体育的“举国体制”改变了吗？](/articles/nyt/1042489.md)
 
