--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-20 [美国驻基辅大使馆因担心空袭关闭一天](/articles/dw/1023639.md)
+
 11-20 [提高核威慑 俄罗斯修改核武使用规则](/articles/dw/1023640.md)
 
 11-20 [黎智英首度出庭自辯 否認鼓吹港獨：太瘋狂](/articles/dw/1023641.md)
@@ -598,6 +600,4 @@
 10-21 [抢在金砖峰会之前 中印达成边境巡逻协议](/articles/dw/1023937.md)
 
 10-21 [朝鲜派兵增援俄侵乌战争？ 北约回应](/articles/dw/1023938.md)
-
-10-21 [拥抱可以，但在这里最多三分钟](/articles/dw/1023939.md)
 
