--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-20 [【404文库】水瓶纪元｜珠海凶案追踪：行车轨迹、伤心徒步团、疑凶已离异多年](/articles/cdt/335315.md)
+
+11-20 [李老师不是你老师｜过去一年我们收录的“献忠事件”汇总](/articles/cdt/335316.md)
+
 11-20 [【404帖子】脸叔ak｜我们这种底层互害的戾气是有文脉传统的](/articles/cdt/335323.md)
 
 11-20 [【404文库】亮见｜又一起撞人事件，太无力了！](/articles/cdt/335328.md)
@@ -596,8 +600,4 @@
 10-13 [【CDT关注】歪脑｜米米亚娜：在海外四通桥声援运动中，我们这样克服恐惧](/articles/cdt/336433.md)
 
 10-12 [【网络民议】你的经济条件甚至不如20年前的野原广志？](/articles/cdt/336434.md)
-
-10-12 [玖奌杂货铺｜她揭露黑暗获得诺贝尔文学奖，没有人指责她抹黑韩国](/articles/cdt/336439.md)
-
-10-12 [木蹊说｜“买的伟大，套的光荣”，大A惊现卧龙凤雏](/articles/cdt/336441.md)
 
