--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-20 [专家预期：特朗普一上任对华关税将升至40%，导致中国GDP下降一个百分点](/articles/voa/1010898.md)
+
+11-20 [特朗普第二任期有望彻底赢得美中战略竞争?](/articles/voa/1010899.md)
+
+11-20 [中国重夺对太平洋岛国第二大捐助国地位 强力输出影响力](/articles/voa/1010900.md)
+
 11-20 [东南亚国家防长在老挝举行会议 中国拒绝与美国防长会面](/articles/voa/1010901.md)
 
 11-20 [巴基斯坦军方将对分离主义武装分子展开新一轮攻势](/articles/voa/1010902.md)
@@ -594,10 +600,4 @@
 11-8 [历史性转变：美国穆斯林和阿拉伯选民抛弃民主党](/articles/voa/1011196.md)
 
 11-8 [阿富汗塔利班罕见与印度举行会谈](/articles/voa/1011197.md)
-
-11-8 [以色列对贝鲁特郊区发动大规模空袭](/articles/voa/1011198.md)
-
-11-8 [特朗普胜选对北约欧盟意味什么？](/articles/voa/1011199.md)
-
-11-8 [澳大利亚种族主义正卷土重来吗？](/articles/voa/1011200.md)
 
