--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+11-20 [工会建议大众员工降薪、福特计划裁员14%](/articles/dw/1023634.md)
+
+11-20 [拜登批准乌军使用杀伤人员地雷](/articles/dw/1023635.md)
+
+11-20 [为躲避关税 轩尼诗考虑将装瓶工序转往中国](/articles/dw/1023636.md)
+
 11-20 [媒体称欧盟计划招标中要求中国企业分享技术](/articles/dw/1023637.md)
 
 11-20 [又是中国商船损坏海缆?已被丹麦海军拦截](/articles/dw/1023638.md)
@@ -594,10 +600,4 @@
 10-22 [柏林电视塔55岁啦！](/articles/dw/1023932.md)
 
 10-22 [喀山金砖峰会将临，印度如何制衡中国？](/articles/dw/1023933.md)
-
-10-22 [美加軍艦穿越台海後 中國舉行實彈射擊](/articles/dw/1023934.md)
-
-10-21 [军演后 美中程导弹系统顺便部署在菲律宾](/articles/dw/1023935.md)
-
-10-21 [巴黎车展:中国车商被吓退了吗?](/articles/dw/1023936.md)
 
