--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+11-21 [波罗的海两条海底电缆疑遭人为破坏，一艘中国货船受到丹麦海军监视](/articles/voa/1010892.md)
+
+11-21 [防范“潜在重大空袭”，美国关闭驻基辅大使馆，告诫美公民注意躲避空袭](/articles/voa/1010893.md)
+
+11-21 [香港传媒大亨黎智英国安案首次亲自出庭作供 市民连日通宵排队旁听支持](/articles/voa/1010894.md)
+
+11-21 [台海局势紧张，台湾人涌向新马置产：柔佛经济特区成避险与移民首选](/articles/voa/1010895.md)
+
 11-21 [俄乌相互发动大规模无人机攻击，美将向乌提供反步兵地雷](/articles/voa/1010896.md)
 
 11-21 [俄乌战争给欧洲国防工业企业带来巨大红利](/articles/voa/1010897.md)
@@ -592,12 +600,4 @@
 11-8 [台湾海巡署运用“民力”通报中国海上活动](/articles/voa/1011190.md)
 
 11-8 [普京称赞特朗普 并称俄罗斯已准备好对话](/articles/voa/1011191.md)
-
-11-8 [人权组织称香港防止酷刑保障削弱，倡联合国专员访港审视](/articles/voa/1011192.md)
-
-11-8 [赖清德是否与美国当选总统特朗普通话？台湾外长：无此计划](/articles/voa/1011193.md)
-
-11-8 [北约秘书长警告俄朝合作将带来更大威胁](/articles/voa/1011194.md)
-
-11-8 [特朗普任命竞选经理威尔斯出任白宫办公厅主任](/articles/voa/1011195.md)
 
