--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-21 [“献忠”式袭击一起接着一起，“蓝底白字”的官方通报已无法安抚中国公众的不满](/articles/voa/1010889.md)
+
+11-21 [习近平与英国首相六年首会：修补英中关系恐难摆脱特朗普阴影](/articles/voa/1010890.md)
+
 11-21 [香港47人案重判 在台港人声援、呼吁台湾警惕中国破坏民主](/articles/voa/1010891.md)
 
 11-21 [波罗的海两条海底电缆疑遭人为破坏，一艘中国货船受到丹麦海军监视](/articles/voa/1010892.md)
@@ -596,8 +600,4 @@
 11-8 [俄罗斯驻港总领事吁加强港俄关系 香港角色由左右逢源变左右为难](/articles/voa/1011187.md)
 
 11-8 [菲律宾总统签署新法律维护南中国海权利和主权 中国提出严正交涉](/articles/voa/1011188.md)
-
-11-8 [习近平、拜登将出席APEC 有望三度“拜习会”](/articles/voa/1011189.md)
-
-11-8 [台湾海巡署运用“民力”通报中国海上活动](/articles/voa/1011190.md)
 
