--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-21 [习近平和卢拉在国事访问中提升中巴关系](/articles/voa/1010887.md)
+
+11-21 [德州州长连颁三道行政令阻止中共在德州的影响力行动](/articles/voa/1010888.md)
+
 11-21 [“献忠”式袭击一起接着一起，“蓝底白字”的官方通报已无法安抚中国公众的不满](/articles/voa/1010889.md)
 
 11-21 [习近平与英国首相六年首会：修补英中关系恐难摆脱特朗普阴影](/articles/voa/1010890.md)
@@ -596,8 +600,4 @@
 11-9 [金融时报：台积电下周一起停止为中国生产先进人工智能芯片](/articles/voa/1011185.md)
 
 11-8 [北京推出十万亿元化债计划给地方政府松绑，应对国际环境不确定性的增加](/articles/voa/1011186.md)
-
-11-8 [俄罗斯驻港总领事吁加强港俄关系 香港角色由左右逢源变左右为难](/articles/voa/1011187.md)
-
-11-8 [菲律宾总统签署新法律维护南中国海权利和主权 中国提出严正交涉](/articles/voa/1011188.md)
 
