--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-21 [人民币贬值对中国决策者构成挑战](/articles/voa/1010882.md)
+
+11-21 [五角大楼：一些美国武器可能会在拜登任期结束后送抵乌克兰](/articles/voa/1010883.md)
+
+11-21 [美国否决联合国安理会最新的加沙停火决议](/articles/voa/1010884.md)
+
 11-21 [候任欧盟外长卡拉斯将如何对付中美俄？](/articles/voa/1010885.md)
 
 11-21 [年度报告：中国在机器人密度方面超过德国](/articles/voa/1010886.md)
@@ -594,10 +600,4 @@
 11-9 [台湾立委控中国淘宝违法在台投放双十一商业广告](/articles/voa/1011180.md)
 
 11-9 [东德和中国民主人士齐聚柏林: 分享抗争经历，反思民主之路](/articles/voa/1011181.md)
-
-11-9 [以色列球迷在阿姆斯特丹遭“反犹太”袭击，当局禁止示威三天](/articles/voa/1011182.md)
-
-11-9 [菲律宾通过新法强化南中国海主权 特朗普重返白宫使中菲局势增添变数？](/articles/voa/1011183.md)
-
-11-9 [中国批准三年6万亿地方债置换方案 分析：杯水车薪，经济刺激效果有限](/articles/voa/1011184.md)
 
