--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 11-21 [育娲人口研究｜中国生育成本报告2024版](/articles/cdt/335257.md)
 
+11-21 [阜成门六号院｜胡耀邦及“八十年代”的永恒价值：纪念耀邦诞辰109周年](/articles/cdt/335259.md)
+
 11-21 [【网络民议】大国AI之“群体情绪检测与预警仪”](/articles/cdt/335261.md)
 
 11-21 [在人间｜底层的互助：越来越多小餐馆对无收入者免单](/articles/cdt/335280.md)
@@ -598,6 +600,4 @@
 10-13 [张3丰的世界｜80年代的“美好”，也不是天赐的](/articles/cdt/336402.md)
 
 10-13 [每日一语 2024.10.13](/articles/cdt/336409.md)
-
-10-20 [【CDT关注】“祝愿中国人尽早把自己还原为一个一个的个人，成为各有个性也共有关怀的十四亿公民！”（外二篇）](/articles/cdt/336410.md)
 
