--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+11-21 [在普京看来，特朗普将带领美国走向崩溃](/articles/nyt/1042187.md)
+
+11-21 [特朗普新内阁集结对华鹰派，他本人会强硬到底吗？](/articles/nyt/1042188.md)
+
 11-20 [黎智英首次出庭作证，否认鼓吹“港独”](/articles/nyt/1042189.md)
 
 11-20 [G20峰会：各国寻求与中国稳定关系，但暗流涌动](/articles/nyt/1042190.md)
@@ -596,8 +600,4 @@
 8-13 [为什么人们担心中美会在南海爆发战争](/articles/nyt/1042485.md)
 
 8-13 [美国高级官员将访华进行经贸谈判](/articles/nyt/1042486.md)
-
-8-12 [体育如何避开政治的刀光剑影？奥林匹克永恒的难题](/articles/nyt/1042487.md)
-
-8-12 [美国寻求加强对华芯片限制，但需要先说服盟友和科技行业](/articles/nyt/1042488.md)
 
