--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-21 [美专家向国会示警 国防工业基础短缺将严重影响华盛顿应对台海冲突能力](/articles/voa/1010878.md)
+
 11-21 [蔡英文赴加拿大哈利法克斯论坛 学者：有助扩大台湾能见度](/articles/voa/1010879.md)
 
 11-21 [芬兰对海底电缆断裂事件启动刑事调查，据报一艘中国货轮为关注目标](/articles/voa/1010880.md)
@@ -598,6 +600,4 @@
 11-9 [世界媒体看中国: 北京如何应对特朗普2.0](/articles/voa/1011176.md)
 
 11-9 [一名中国公民因试图擅闯特朗普的海湖庄园而被羁押](/articles/voa/1011177.md)
-
-11-9 [中缅边境局势紧张之际,中国支持缅甸军政府](/articles/voa/1011178.md)
 
