--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-21 [真主党称以色列不能强加停火条件 哈马斯重申立场、加沙谈判仍停滞](/articles/voa/1010877.md)
+
 11-21 [美专家向国会示警 国防工业基础短缺将严重影响华盛顿应对台海冲突能力](/articles/voa/1010878.md)
 
 11-21 [蔡英文赴加拿大哈利法克斯论坛 学者：有助扩大台湾能见度](/articles/voa/1010879.md)
@@ -598,6 +600,4 @@
 11-9 [联合国称加沙的行动是“暴行”，以色列予以反驳](/articles/voa/1011175.md)
 
 11-9 [世界媒体看中国: 北京如何应对特朗普2.0](/articles/voa/1011176.md)
-
-11-9 [一名中国公民因试图擅闯特朗普的海湖庄园而被羁押](/articles/voa/1011177.md)
 
