--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-21 [習近平拉攏盧拉 中國升級與巴西雙邊關係](/articles/dw/1023632.md)
+
 11-21 [專訪《從今以後》導演：同志伴侶在香港受什麼保障？](/articles/dw/1023633.md)
 
 11-20 [工会建议大众员工降薪、福特计划裁员14%](/articles/dw/1023634.md)
@@ -598,6 +600,4 @@
 10-22 [德国总理肖尔茨：不应惧怕来自中国电动车的竞争](/articles/dw/1023930.md)
 
 10-22 [澳洲欲向美國採購遠程飛彈 強化嚇阻力](/articles/dw/1023931.md)
-
-10-22 [柏林电视塔55岁啦！](/articles/dw/1023932.md)
 
