--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-21 [“币圈”争议人物孙宇晨以620万美元拍下天价香蕉](/articles/nyt/1042185.md)
+
 11-21 [中欧贸易战殃及干邑白兰地，轩尼诗工厂工人罢工](/articles/nyt/1042186.md)
 
 11-21 [在普京看来，特朗普将带领美国走向崩溃](/articles/nyt/1042187.md)
@@ -598,6 +600,4 @@
 8-13 [中国如何用边境村庄建起新“长城”](/articles/nyt/1042483.md)
 
 8-13 [生活在中国南海野心阴影下的菲律宾渔民](/articles/nyt/1042484.md)
-
-8-13 [为什么人们担心中美会在南海爆发战争](/articles/nyt/1042485.md)
 
