--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-21 [启用美国远程导弹后 乌克兰再发射英国巡航导弹袭击俄罗斯](/articles/voa/1010876.md)
+
 11-21 [真主党称以色列不能强加停火条件 哈马斯重申立场、加沙谈判仍停滞](/articles/voa/1010877.md)
 
 11-21 [美专家向国会示警 国防工业基础短缺将严重影响华盛顿应对台海冲突能力](/articles/voa/1010878.md)
@@ -598,6 +600,4 @@
 11-9 [美国揭露伊朗控制的团伙曾策划刺杀特朗普](/articles/voa/1011174.md)
 
 11-9 [联合国称加沙的行动是“暴行”，以色列予以反驳](/articles/voa/1011175.md)
-
-11-9 [世界媒体看中国: 北京如何应对特朗普2.0](/articles/voa/1011176.md)
 
