--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-21 [默克尔回忆录谈及为何阻乌克兰入北约](/articles/dw/1023630.md)
+
+11-21 [俄罗斯反对派海外首次大型反战示威](/articles/dw/1023631.md)
+
 11-21 [習近平拉攏盧拉 中國升級與巴西雙邊關係](/articles/dw/1023632.md)
 
 11-21 [專訪《從今以後》導演：同志伴侶在香港受什麼保障？](/articles/dw/1023633.md)
@@ -596,8 +600,4 @@
 10-22 [中国经济拖累白酒巨头茅台](/articles/dw/1023928.md)
 
 10-22 [长平漫游：“我要吃面包”](/articles/dw/1023929.md)
-
-10-22 [德国总理肖尔茨：不应惧怕来自中国电动车的竞争](/articles/dw/1023930.md)
-
-10-22 [澳洲欲向美國採購遠程飛彈 強化嚇阻力](/articles/dw/1023931.md)
 
