--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-21 [拾光景观｜超百亿投资，老干部休养基地](/articles/cdt/335240.md)
+
+11-21 [每日一语 2024.11.20](/articles/cdt/335243.md)
+
 11-21 [倪刃｜为什么会有人怀念计划经济？](/articles/cdt/335254.md)
 
 11-21 [育娲人口研究｜中国生育成本报告2024版](/articles/cdt/335257.md)
@@ -596,8 +600,4 @@
 10-14 [老干体v｜地方债，终究还是中央扛下了所有](/articles/cdt/336397.md)
 
 10-14 [老鱼时评｜任泽平为啥开始吃“爱国饭”了](/articles/cdt/336398.md)
-
-10-14 [木蹊说｜鲁镇爷叔](/articles/cdt/336399.md)
-
-10-13 [张3丰的世界｜80年代的“美好”，也不是天赐的](/articles/cdt/336402.md)
 
