--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-21 [中企参加竞标必须分享技术？专家质疑合法性](/articles/dw/1023629.md)
+
 11-21 [默克尔回忆录谈及为何阻乌克兰入北约](/articles/dw/1023630.md)
 
 11-21 [俄罗斯反对派海外首次大型反战示威](/articles/dw/1023631.md)
@@ -598,6 +600,4 @@
 10-22 [奥巴马、特朗普、拜登：美国经济真的在乎谁当总统吗？](/articles/dw/1023927.md)
 
 10-22 [中国经济拖累白酒巨头茅台](/articles/dw/1023928.md)
-
-10-22 [长平漫游：“我要吃面包”](/articles/dw/1023929.md)
 
