--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-21 [基本常识｜一名日本人被当成汉奸，被警察当众扒了球衣，还被韩国媒体报道……](/articles/cdt/335237.md)
+
 11-21 [拾光景观｜超百亿投资，老干部休养基地](/articles/cdt/335240.md)
 
 11-21 [每日一语 2024.11.20](/articles/cdt/335243.md)
@@ -598,6 +600,4 @@
 10-14 [建设性意见｜明天哪只股票会涨？](/articles/cdt/336393.md)
 
 10-14 [老干体v｜地方债，终究还是中央扛下了所有](/articles/cdt/336397.md)
-
-10-14 [老鱼时评｜任泽平为啥开始吃“爱国饭”了](/articles/cdt/336398.md)
 
