--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-21 [民调：半数以上乌克兰人希望谈判结束战争](/articles/dw/1023628.md)
+
 11-21 [中企参加竞标必须分享技术？专家质疑合法性](/articles/dw/1023629.md)
 
 11-21 [默克尔回忆录谈及为何阻乌克兰入北约](/articles/dw/1023630.md)
@@ -598,6 +600,4 @@
 10-22 [德国若想去风险成功 印度是关键](/articles/dw/1023926.md)
 
 10-22 [奥巴马、特朗普、拜登：美国经济真的在乎谁当总统吗？](/articles/dw/1023927.md)
-
-10-22 [中国经济拖累白酒巨头茅台](/articles/dw/1023928.md)
 
