--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-22 [台外交部次长：军援乌克兰“过于敏感”，台湾不会涉入，但盼在乌设立代表处](/articles/voa/1010866.md)
+
 11-21 [国事光析：从政权暴力到民间暴力的恶性发作](/articles/voa/1010867.md)
 
 11-21 [美特遣队支持菲军在南中国海行动，应对中国咄咄逼人势态](/articles/voa/1010868.md)
@@ -598,6 +600,4 @@
 11-9 [以色列球迷遇袭后，荷兰当局调查来自特拉维夫的警讯是否被忽略](/articles/voa/1011164.md)
 
 11-9 [巴基斯坦与中国签署驴肉和驴皮出口协议引发争议](/articles/voa/1011165.md)
-
-11-9 [美陆战一师老兵眼中的长津湖战役：击退共军人海战术；师长“不可能”向“志愿军”致敬](/articles/voa/1011166.md)
 
