--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,6 +9,8 @@
 
 11-21 [每日一语 2024.11.20](/articles/cdt/335243.md)
 
+11-22 [何桂蓝｜香港民主派初选47人案陈词](/articles/cdt/335248.md)
+
 11-21 [倪刃｜为什么会有人怀念计划经济？](/articles/cdt/335254.md)
 
 11-21 [育娲人口研究｜中国生育成本报告2024版](/articles/cdt/335257.md)
@@ -598,6 +600,4 @@
 10-14 [【网络民议】“关键是我们想好好说话您不让啊”](/articles/cdt/336390.md)
 
 10-14 [建设性意见｜明天哪只股票会涨？](/articles/cdt/336393.md)
-
-10-14 [老干体v｜地方债，终究还是中央扛下了所有](/articles/cdt/336397.md)
 
