--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+11-22 [美国特使会晤内塔尼亚胡,推动以色列与真主党停火](/articles/voa/1010855.md)
+
+11-22 [巴西及南美: 下一轮美中竞争的角力场？](/articles/voa/1010856.md)
+
+11-22 [俄罗斯动用新型中程导弹攻击乌克兰,普京号称美国无力拦截](/articles/voa/1010857.md)
+
+11-22 [国际原子能机构通过决议谴责伊朗不合作,中俄投反对票](/articles/voa/1010858.md)
+
 11-22 [墨西哥总统承认加拿大对中国汽车厂感到担忧，但表示该厂并不存在](/articles/voa/1010859.md)
 
 11-22 [中国“假留学生”在澳大利亚谋职面临打击](/articles/voa/1010860.md)
@@ -592,12 +600,4 @@
 11-10 [中国与印尼协议加强在锂、绿色能源、旅游、安全等领域的合作](/articles/voa/1011153.md)
 
 11-10 [美国南卡州43只实验猴脱逃 中国网民热议病毒传播阴谋论](/articles/voa/1011154.md)
-
-11-10 [强调政权和平转移 拜登先邀特朗普于白宫会面](/articles/voa/1011155.md)
-
-11-10 [“反美斗士”司马南传遭禁言一年 环时前总编胡锡进重返社媒](/articles/voa/1011156.md)
-
-11-10 [加州和新泽西州的消防人员扑灭野火取得进展](/articles/voa/1011157.md)
-
-11-10 [普京将俄罗斯与朝鲜的共同防御条约签署成法律](/articles/voa/1011158.md)
 
