--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+11-22 [特朗普誓言结束战争可能让乌克兰别无选择](/articles/nyt/1042183.md)
+
+11-22 [《唐人街内部》：在悬疑与怪诞中嘲讽亚裔刻板印象](/articles/nyt/1042184.md)
+
 11-21 [“币圈”争议人物孙宇晨以620万美元拍下天价香蕉](/articles/nyt/1042185.md)
 
 11-21 [中欧贸易战殃及干邑白兰地，轩尼诗工厂工人罢工](/articles/nyt/1042186.md)
@@ -596,8 +600,4 @@
 8-14 [特朗普与马斯克对谈：混乱的开场，缺乏重点的对话](/articles/nyt/1042481.md)
 
 8-14 [为何中俄频繁进行挑衅性联合军事演习](/articles/nyt/1042482.md)
-
-8-13 [中国如何用边境村庄建起新“长城”](/articles/nyt/1042483.md)
-
-8-13 [生活在中国南海野心阴影下的菲律宾渔民](/articles/nyt/1042484.md)
 
