--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-22 [朝鲜出兵帮助俄罗斯 危及中国的平衡做法](/articles/voa/1010853.md)
+
 11-22 [引发安全关切后，美联邦通讯委员会建议对中国视频门铃制造商罚款73万多美元](/articles/voa/1010854.md)
 
 11-22 [美国特使会晤内塔尼亚胡,推动以色列与真主党停火](/articles/voa/1010855.md)
@@ -598,6 +600,4 @@
 11-10 [COP29气候变迁大会于阿塞拜疆登场 塔利班政府首次参与](/articles/voa/1011151.md)
 
 11-10 [特朗普胜选，“走线客”不安：有人试图赶在他就任前入境，有人担心被遣返](/articles/voa/1011152.md)
-
-11-10 [中国与印尼协议加强在锂、绿色能源、旅游、安全等领域的合作](/articles/voa/1011153.md)
 
