--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-22 [川普2.0時代 澳洲該如何在美中之間站穩腳步？](/articles/dw/1023622.md)
+
 11-21 [国际刑事法院对以、哈领导人的逮捕令引起哪些反响？](/articles/dw/1023623.md)
 
 11-21 [树枝上的“功夫熊猫”](/articles/dw/1023624.md)
@@ -598,6 +600,4 @@
 10-23 [网上“晒娃” 这些NG行为先不要](/articles/dw/1023920.md)
 
 10-23 [華為產品內含台積電晶片 違反美出口管制？](/articles/dw/1023921.md)
-
-10-23 [大金砖峰会登场：普京会晤习近平与莫迪](/articles/dw/1023922.md)
 
