--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-22 [天价香蕉：它为什么值620万美元？买家孙宇晨是谁？](/articles/nyt/1042182.md)
+
 11-22 [特朗普誓言结束战争可能让乌克兰别无选择](/articles/nyt/1042183.md)
 
 11-22 [《唐人街内部》：在悬疑与怪诞中嘲讽亚裔刻板印象](/articles/nyt/1042184.md)
@@ -598,6 +600,4 @@
 8-14 [旧金山市长选举：“拉拢”华裔选民成关键](/articles/nyt/1042480.md)
 
 8-14 [特朗普与马斯克对谈：混乱的开场，缺乏重点的对话](/articles/nyt/1042481.md)
-
-8-14 [为何中俄频繁进行挑衅性联合军事演习](/articles/nyt/1042482.md)
 
