--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-22 [特朗普拟开征60%关税 中国贸易谈判代表：有能力化解冲击 愿与美方积极对话](/articles/voa/1010849.md)
+
 11-22 [台湾总统将访问太平洋友邦 未透露过境美国的细节](/articles/voa/1010850.md)
 
 11-22 [内塔尼亚胡与美国同声抨击国际刑事法院逮捕令 欧盟称应履行](/articles/voa/1010851.md)
@@ -598,6 +600,4 @@
 11-10 [路透：美国政府下令台积电停止向中国供应先进人工智能芯片](/articles/voa/1011147.md)
 
 11-10 [中国的西红柿培训项目给肯尼亚带来机遇，也引发一些担忧](/articles/voa/1011148.md)
-
-11-10 [原声带·许微其：超级大国想要消灭我](/articles/voa/1011149.md)
 
