--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-22 [美国得克萨斯州切断与中国的投资关系](/articles/dw/1023619.md)
+
+11-22 [客座评论：北京的四条红线——习近平的“热战”信号](/articles/dw/1023620.md)
+
 11-22 [失去Chrome，谷歌会怎样？](/articles/dw/1023621.md)
 
 11-22 [川普2.0時代 澳洲該如何在美中之間站穩腳步？](/articles/dw/1023622.md)
@@ -596,8 +600,4 @@
 10-23 [客座评论：习近平的退位和接班人问题](/articles/dw/1023917.md)
 
 10-23 [国际舆论评论金砖峰会：从单极世界向多极化发展](/articles/dw/1023918.md)
-
-10-23 [芬兰特产毒蘑菇](/articles/dw/1023919.md)
-
-10-23 [网上“晒娃” 这些NG行为先不要](/articles/dw/1023920.md)
 
