--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-22 [孙韵：特朗普第二任期的美中关系](/articles/voa/1010845.md)
+
 11-22 [COP29将闭幕协议仍难产 气候融资金额陷僵局、中国列发展中国家惹议](/articles/voa/1010846.md)
 
 11-22 [韩国称俄罗斯向朝鲜提供防空导弹 以换取其派兵支持作战](/articles/voa/1010847.md)
@@ -598,6 +600,4 @@
 11-11 [纽约州公园雇员在灭火时身亡，纽约和新泽西州发布空气质量警告](/articles/voa/1011143.md)
 
 11-11 [特朗普在美国总统大选中获得压倒性胜利](/articles/voa/1011144.md)
-
-11-11 [北京公布南中国海争议岛屿领海基线，并称反对菲律宾颁布《海洋区域法》](/articles/voa/1011145.md)
 
