--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 11-22 [每日一语 2024.11.21](/articles/cdt/335199.md)
 
+11-22 [建设性意见｜向杭州市监局实名举报农夫山泉纯净水涉嫌危害公众健康](/articles/cdt/335202.md)
+
 11-22 [亮见｜钟睒睒，太猛了！](/articles/cdt/335203.md)
 
 11-22 [【404文库】听晖道来｜上海七宝有大厂员工在堵路了](/articles/cdt/335205.md)
@@ -598,6 +600,4 @@
 10-16 [大佳说｜有些市场可以假装努力，但外汇不会陪你演戏。](/articles/cdt/336358.md)
 
 10-16 [每日一语 2024.10.15](/articles/cdt/336359.md)
-
-10-15 [【CDT关注】莽莽｜中国Z世代审核员：生存吃饭最重要](/articles/cdt/336360.md)
 
