--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-23 [中国经济不景失业率高企 青年求职无望图谋出走他乡](/articles/voa/1010837.md)
+
 11-23 [基辅证实，俄使用新型中程弹道导弹攻击乌城市，速度不低于11马赫](/articles/voa/1010838.md)
 
 11-23 [美国“强迫劳动黑名单”上新增29家中企，为历来最大规模“扩编”](/articles/voa/1010839.md)
@@ -598,6 +600,4 @@
 11-11 [特朗普施压参院共和党领袖候选人同意迅速认可其内阁人选](/articles/voa/1011135.md)
 
 11-11 [领土争议未解 索马里拒绝埃塞俄比亚参与非盟新使命](/articles/voa/1011136.md)
-
-11-11 [海地更换总理 民主过渡进程动荡加剧](/articles/voa/1011137.md)
 
