--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-23 [【404文库】“闭上眼睛，鬼怪并不会因此遁去”（外二篇）](/articles/cdt/335192.md)
+
 11-22 [每日一语 2024.11.21](/articles/cdt/335199.md)
 
 11-22 [建设性意见｜向杭州市监局实名举报农夫山泉纯净水涉嫌危害公众健康](/articles/cdt/335202.md)
@@ -598,6 +600,4 @@
 10-16 [独角鲸工作坊｜一个“95后研究员”拥有4个博士学位，谁的悲哀](/articles/cdt/336356.md)
 
 10-16 [大佳说｜有些市场可以假装努力，但外汇不会陪你演戏。](/articles/cdt/336358.md)
-
-10-16 [每日一语 2024.10.15](/articles/cdt/336359.md)
 
