--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-23 [VOA专访波兰外长：欧洲必须为美国重新考虑乌克兰战略做好准备](/articles/voa/1010825.md)
+
 11-23 [赖清德将出访南太平洋邦交国 过境美国安排受瞩目](/articles/voa/1010826.md)
 
 11-23 [美副国务卿坎贝尔：美中不会注定开战，但注定是战略竞争关系](/articles/voa/1010827.md)
@@ -598,6 +600,4 @@
 11-12 [印度加强钢铁进口管控，严防中国低价钢材冲击本土市场](/articles/voa/1011123.md)
 
 11-12 [台湾启动对美大规模军购谈判？台总统府称目前尚无新一阶段讨论](/articles/voa/1011124.md)
-
-11-12 [曹兴诚状告国台办宋涛、陈斌华恐吓，反制“台独”黑名单惩戒](/articles/voa/1011125.md)
 
