--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-23 [菲律宾副总统语出惊人 已雇人刺杀总统](/articles/dw/1023611.md)
+
 11-23 [棋王赛史上首次！亚洲棋手的巅峰对决](/articles/dw/1023612.md)
 
 11-22 [中国增加对9国单方面免签 日本表示欢迎](/articles/dw/1023613.md)
@@ -598,6 +600,4 @@
 10-24 [中国俄罗斯伊朗朝鲜悄然形成邪恶新轴心？](/articles/dw/1023909.md)
 
 10-24 [欧盟对华政策将更凸显鹰派](/articles/dw/1023910.md)
-
-10-24 [《喀山宣言》反单边制裁  欧盟批普京滥用金砖](/articles/dw/1023911.md)
 
