--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-23 [路透社：富裕国家同意将COP29气候协议金额提高至3000亿美元](/articles/voa/1010821.md)
+
 11-23 [美国与斐济启动驻军地位协定的磋商](/articles/voa/1010822.md)
 
 11-23 [普京称俄罗斯将继续在战斗中测试新型导弹](/articles/voa/1010823.md)
@@ -598,6 +600,4 @@
 11-12 [特朗普提名斯特凡尼克众议员出任美国驻联合国大使](/articles/voa/1011119.md)
 
 11-12 [自大选输给特朗普以来，哈里斯与拜登首次共同露面纪念退伍军人节](/articles/voa/1011120.md)
-
-11-12 [旅美维吾尔人在特朗普大选获胜后敦促美国采取更强硬的措施应对中国的新疆政策](/articles/voa/1011121.md)
 
