--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-23 [老萧杂说｜对于无差别伤害，人们出现“失语症”，是因为什么？](/articles/cdt/335179.md)
+
+11-23 [新新默存｜温克坚：华夏再无春晖——哀悼华春辉先生](/articles/cdt/335181.md)
+
 11-23 [【敏感词库】秘鲁的秘为啥读bì、超20个“献忠”词组、薄瓜瓜](/articles/cdt/335190.md)
 
 11-23 [【404文库】“闭上眼睛，鬼怪并不会因此遁去”（外二篇）](/articles/cdt/335192.md)
@@ -596,8 +600,4 @@
 10-16 [【404文库】让悲观者前行｜我眼里的张庆方律师](/articles/cdt/336343.md)
 
 10-16 [极昼工作室｜整顿职场后，这些年轻人找不到工作了](/articles/cdt/336348.md)
-
-10-16 [刘玄鸡｜孙悟空的销账和跑路](/articles/cdt/336354.md)
-
-10-16 [独角鲸工作坊｜一个“95后研究员”拥有4个博士学位，谁的悲哀](/articles/cdt/336356.md)
 
