--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-23 [特朗普会晤北约秘书长吕特，两人讨论俄乌战争及全球安全议题](/articles/voa/1010819.md)
+
 11-23 [法轮功《九评》20周年，美国会议员：提高对中共邪恶的认知，“我跟你们一起战斗”](/articles/voa/1010820.md)
 
 11-23 [路透社：富裕国家同意将COP29气候协议金额提高至3000亿美元](/articles/voa/1010821.md)
@@ -598,6 +600,4 @@
 11-12 [印尼:尽管与中国签署了联合协议，但在南中国海没有与中国重叠的主权声索](/articles/voa/1011117.md)
 
 11-12 [特朗普任命“边境沙皇”领导驱逐无证移民行动](/articles/voa/1011118.md)
-
-11-12 [特朗普提名斯特凡尼克众议员出任美国驻联合国大使](/articles/voa/1011119.md)
 
