--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-23 [《我没有敌人》：林培瑞眼中的刘晓波](/articles/voa/1010818.md)
+
 11-23 [特朗普会晤北约秘书长吕特，两人讨论俄乌战争及全球安全议题](/articles/voa/1010819.md)
 
 11-23 [法轮功《九评》20周年，美国会议员：提高对中共邪恶的认知，“我跟你们一起战斗”](/articles/voa/1010820.md)
@@ -598,6 +600,4 @@
 11-12 [马斯克在美国政坛影响力大增，他在中国议题上说过哪些话？](/articles/voa/1011116.md)
 
 11-12 [印尼:尽管与中国签署了联合协议，但在南中国海没有与中国重叠的主权声索](/articles/voa/1011117.md)
-
-11-12 [特朗普任命“边境沙皇”领导驱逐无证移民行动](/articles/voa/1011118.md)
 
