--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-24 [医学界｜遭7次电击治疗后，一位跨性别者起诉医院](/articles/cdt/335173.md)
+
 11-23 [老萧杂说｜对于无差别伤害，人们出现“失语症”，是因为什么？](/articles/cdt/335179.md)
 
 11-23 [新新默存｜温克坚：华夏再无春晖——哀悼华春辉先生](/articles/cdt/335181.md)
@@ -598,6 +600,4 @@
 10-16 [龙言大阅｜多地公务员欠薪，两个GDP超过10万亿的经济强省，财政收支也都已失衡](/articles/cdt/336341.md)
 
 10-16 [【404文库】让悲观者前行｜我眼里的张庆方律师](/articles/cdt/336343.md)
-
-10-16 [极昼工作室｜整顿职场后，这些年轻人找不到工作了](/articles/cdt/336348.md)
 
