--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-24 [特朗普将改变中国与中东的战略关系?](/articles/voa/1010813.md)
+
+11-24 [哈利法克斯国际安全论坛聚焦中国威胁](/articles/voa/1010814.md)
+
+11-24 [美若取消中国永久正常贸易关系地位，将如何影响中国经济？](/articles/voa/1010815.md)
+
 11-24 [菲律宾高层分裂公开化！副总统扬言自己如遭不测就刺杀总统马科斯](/articles/voa/1010816.md)
 
 11-23 [乌军在俄境内面临强大压力，控制区大幅度缩小，上万朝军即将参战](/articles/voa/1010817.md)
@@ -594,10 +600,4 @@
 11-12 [《纽约时报》报道：特朗普选择鲁比奥参议员出任国务卿](/articles/voa/1011111.md)
 
 11-12 [报道：特朗普邀请对中国持鹰派立场的迈克·沃尔兹众议员出任国家安全顾问](/articles/voa/1011112.md)
-
-11-12 [年轻的黑人和拉丁裔男性：选择特朗普是因为经济和就业](/articles/voa/1011113.md)
-
-11-12 [美国打击叙利亚境内与伊朗有关的目标](/articles/voa/1011114.md)
-
-11-12 [著名废奴主义者塔布曼在退伍军人节被追授将军衔。](/articles/voa/1011115.md)
 
