--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 11-24 [【重温】布鲁金斯学会｜中国新疆的压迫制度是如何发展？我们又要如何遏制它？](/articles/cdt/335168.md)
 
+11-24 [BIE别的女孩｜隐秘的角落：被家暴的性少数群体](/articles/cdt/335170.md)
+
 11-24 [医学界｜遭7次电击治疗后，一位跨性别者起诉医院](/articles/cdt/335173.md)
 
 11-23 [老萧杂说｜对于无差别伤害，人们出现“失语症”，是因为什么？](/articles/cdt/335179.md)
@@ -598,6 +600,4 @@
 11-1 [【中国哭墙】要咬牙才能勉强像个人的活下去（10月1日-10月31日，2024年）](/articles/cdt/336332.md)
 
 10-16 [财主的阵地｜依赖于政府的创新，为什么不靠谱？](/articles/cdt/336339.md)
-
-10-16 [龙言大阅｜多地公务员欠薪，两个GDP超过10万亿的经济强省，财政收支也都已失衡](/articles/cdt/336341.md)
 
