--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-24 [每日一语 2024.11.23](/articles/cdt/335158.md)
+
 11-24 [【404维修站】超酱的电影天堂｜大陆影人横扫金马，2024金马奖获奖名单](/articles/cdt/335163.md)
 
 11-24 [【CDT关注】歪脑｜伴废墟而居——新冠疫情四年后，武汉“原爆点”上的华安里社区](/articles/cdt/335166.md)
@@ -598,6 +600,4 @@
 10-17 [基本常识｜四川朋友别做梦啦，拆迁暴富的时代一去不复返了](/articles/cdt/336325.md)
 
 10-17 [木蹊说｜“川爷”千万拆迁款？一个专为韭菜定制的谣言](/articles/cdt/336327.md)
-
-10-17 [【重温】暖壶人｜民族政策历史文件](/articles/cdt/336328.md)
 
