--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-24 [晖常有道｜网友们说出了潮州这次的更多内幕了](/articles/cdt/335154.md)
+
 11-24 [每日一语 2024.11.23](/articles/cdt/335158.md)
 
 11-24 [【404维修站】超酱的电影天堂｜大陆影人横扫金马，2024金马奖获奖名单](/articles/cdt/335163.md)
@@ -598,6 +600,4 @@
 10-17 [【CDT关注】“今年的诺贝尔经济学奖，十年前就让中共不高兴了”](/articles/cdt/336324.md)
 
 10-17 [基本常识｜四川朋友别做梦啦，拆迁暴富的时代一去不复返了](/articles/cdt/336325.md)
-
-10-17 [木蹊说｜“川爷”千万拆迁款？一个专为韭菜定制的谣言](/articles/cdt/336327.md)
 
