--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-24 [加拿大军方首领反驳美准防长观点 为女性在前线作战的贡献辩护](/articles/voa/1010806.md)
+
 11-24 [巴基斯坦教派冲突造成近80人死亡](/articles/voa/1010807.md)
 
 11-24 [伊斯兰国领导人在伊拉克库尔德斯坦被捕](/articles/voa/1010808.md)
@@ -598,6 +600,4 @@
 11-12 [布林肯前往布鲁塞尔，讨论推动“激增”对乌军事援助](/articles/voa/1011104.md)
 
 11-12 [俄高官告诉王毅：俄中应反制美国的遏制企图](/articles/voa/1011105.md)
-
-11-12 [荷兰电车遭纵火，以色列球迷遇袭后阿姆斯特丹局势紧张](/articles/voa/1011106.md)
 
