--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-24 [菲律宾国安会：副总统威胁刺杀总统属国安问题](/articles/voa/1010801.md)
+
 11-24 [俄罗斯网攻侵略性加剧 英国大臣将警告北约“不应低估”](/articles/voa/1010802.md)
 
 11-24 [特朗普回归或重塑南中国海局势，菲律宾面临更大责任与挑战](/articles/voa/1010803.md)
@@ -598,6 +600,4 @@
 11-13 [疫苗维权先驱成阶下囚，何方美以重婚罪被判刑五年六个月](/articles/voa/1011099.md)
 
 11-13 [被疑剽窃美F-35的隐形战机，中国歼-35A珠海航空展升空首秀](/articles/voa/1011100.md)
-
-11-13 [中国公民在巴基斯坦多次遇袭，北京要求派中国安保人员到巴基斯坦执行安保任务](/articles/voa/1011101.md)
 
