--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-24 [波罗的海电缆事件：瑞典加入丹麦监控中国船只](/articles/dw/1023600.md)
+
 11-24 [德国大选热门话题：乌克兰难民福利过多？](/articles/dw/1023601.md)
 
 11-24 [攻击俄罗斯境内目标 乌克兰获准使用哪些西方武器？](/articles/dw/1023602.md)
@@ -598,6 +600,4 @@
 10-25 [客座评论：Chindia 是否会再次到来？](/articles/dw/1023898.md)
 
 10-25 [超越中国 印度在德留学生数量登顶](/articles/dw/1023899.md)
-
-10-25 [赖清德再赴金门：“台澎金马寸土不让”](/articles/dw/1023900.md)
 
