--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-24 [日美为应对台海紧急状况制定联合军事及导弹部署计划](/articles/voa/1010797.md)
+
 11-24 [描写武汉封城、同志“敏感议题”，中国电影在台湾金马奖斩获多项大奖](/articles/voa/1010798.md)
 
 11-24 [以色列人在海外成攻击目标 驻约旦大使馆传枪响、一犹太拉比在阿联酋遇害](/articles/voa/1010799.md)
@@ -598,6 +600,4 @@
 11-13 [“特朗普2.0”将至 分析: 中国或强化近邻外交应对美中关系的“急风骤雨”](/articles/voa/1011095.md)
 
 11-13 [特朗普“搓澡舞”风靡中国：中国人寄自由希望于美国身上？](/articles/voa/1011096.md)
-
-11-13 [北约秘书长警告俄与中国伊朗朝鲜合作正威胁欧洲、印太和北美](/articles/voa/1011097.md)
 
