--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-25 [中国与巴基斯坦的乳制品交易: 对当地私企是福是祸？](/articles/voa/1010792.md)
+
 11-25 [澳大利亚放弃对禁止传播虚假信息不力科技公司的巨额罚款计划](/articles/voa/1010793.md)
 
 11-25 [中国恶性无差别暴袭频发，当局神经紧张紧急强化公共安全措施](/articles/voa/1010794.md)
@@ -598,6 +600,4 @@
 11-13 [共和党领袖庆祝“美国人民的授权”](/articles/voa/1011090.md)
 
 11-13 [特朗普第二任期会对美中在非洲竞争产生哪些影响?](/articles/voa/1011091.md)
-
-11-13 [珠海发生驾车冲撞案后,日本使馆敦促本国公民不要大声说日语](/articles/voa/1011092.md)
 
