--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-25 [莫斯科为新兵免除债务，美联社看到俄罗斯新导弹的残骸](/articles/voa/1010790.md)
+
+11-25 [幕僚称特朗普“非常担心”俄乌冲突中武器使用的升级](/articles/voa/1010791.md)
+
 11-25 [中国与巴基斯坦的乳制品交易: 对当地私企是福是祸？](/articles/voa/1010792.md)
 
 11-25 [澳大利亚放弃对禁止传播虚假信息不力科技公司的巨额罚款计划](/articles/voa/1010793.md)
@@ -596,8 +600,4 @@
 11-13 [阿富汗塔利班宣布将公开处决死刑犯](/articles/voa/1011088.md)
 
 11-13 [特朗普提名前国家情报总监拉特克里夫出任中情局长](/articles/voa/1011089.md)
-
-11-13 [共和党领袖庆祝“美国人民的授权”](/articles/voa/1011090.md)
-
-11-13 [特朗普第二任期会对美中在非洲竞争产生哪些影响?](/articles/voa/1011091.md)
 
