--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-25 [地球告别可能是实际月球一块巨石的临时“迷你月球”](/articles/voa/1010786.md)
+
 11-25 [巴基斯坦首都因反对派集会而正式安全封闭](/articles/voa/1010787.md)
 
 11-25 [以色列大规模攻击贝鲁特后 真主党火箭轰炸特拉维夫附近地区](/articles/voa/1010788.md)
@@ -598,6 +600,4 @@
 11-13 [特朗普提名南达科他州长诺姆出任国土安全部长](/articles/voa/1011084.md)
 
 11-13 [特朗普任命马斯克与拉马斯瓦米领导削减和重组政府机构的努力](/articles/voa/1011085.md)
-
-11-13 [特朗普提名军人出身的福克斯新闻台主持人海格塞斯出任国防部长](/articles/voa/1011086.md)
 
