--- a/articles/cdt/335160.md
+++ b/articles/cdt/335160.md
@@ -2,4 +2,4 @@
 [每日一语 2024.11.24](https://chinadigitaltimes.net/chinese/713415.html)
 ------
 
-<p>【历史上的今天】2022年11月24日，乌鲁木齐吉祥苑小区发生火灾，新冠疫情封控措施阻碍救援，居民无法逃生。官方称火灾导致10人死亡，9人受伤。据多家外媒报道，遇难者包括48岁的Abdurahman和四个未成年子女，而她的丈夫和大儿子2017年被关进“再教育营”后下落不明。新疆火灾点燃了“白纸运动”，海内外多地民众上街悼念遇难者，抗议封控。中国当局在12月初终结了清零政策。</p><p><img decoding="async" src="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%200%200'%3E%3C/svg%3E" alt="img" data-lazy-src="https://chinadigitaltimes.net/chinese/files/2024/11/20241124_dailyquote.png"><noscript><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/11/20241124_dailyquote.png" alt="img"></noscript></p><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/713415.html" data-a2a-title="每日一语 2024.11.24"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_reddit" href="https://www.addtoany.com/add_to/reddit?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Reddit" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_copy_link" href="https://www.addtoany.com/add_to/copy_link?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Copy Link" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
+<p>【历史上的今天】2022年11月24日，乌鲁木齐吉祥苑小区发生火灾，新冠疫情封控措施阻碍救援，居民无法逃生。官方称火灾导致10人死亡，9人受伤。据多家外媒报道，遇难者包括48岁的Abdurahman和四个未成年子女，而她的丈夫和大儿子2017年被关进“再教育营”后下落不明。新疆火灾点燃了“白纸运动”，海内外多地民众上街悼念遇难者，抗议封控。中国当局在12月初终结了清零政策。</p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/11/20241124_dailyquote.png" alt="img"></p><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/713415.html" data-a2a-title="每日一语 2024.11.24"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_reddit" href="https://www.addtoany.com/add_to/reddit?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Reddit" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_copy_link" href="https://www.addtoany.com/add_to/copy_link?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F713415.html&amp;linkname=%E6%AF%8F%E6%97%A5%E4%B8%80%E8%AF%AD%202024.11.24" title="Copy Link" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
