--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-25 [美国各地移民准备应对特朗普的打击行动](/articles/nyt/1042177.md)
+
 11-25 [马斯克想从中国得到什么](/articles/nyt/1042178.md)
 
 11-25 [中国黑客攻击深远程度令美国官员愈发担忧](/articles/nyt/1042179.md)
@@ -598,6 +600,4 @@
 8-16 [中国自动驾驶公司文远知行将在美国上市](/articles/nyt/1042475.md)
 
 8-15 [岸田文雄辞任日本首相，自民党该如何赢回民众信任？](/articles/nyt/1042476.md)
-
-8-15 [在“苹果城”制造电动汽车，富士康有何竞争力？](/articles/nyt/1042477.md)
 
