--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-25 [中国气球再度现踪台海上空 7个月来首见](/articles/voa/1010781.md)
+
 11-25 [乌拉圭总统选举决选 左翼联盟将重新执政](/articles/voa/1010782.md)
 
 11-25 [委内瑞拉反对派谴责警方“围攻”大使馆](/articles/voa/1010783.md)
@@ -598,6 +600,4 @@
 11-13 [印度尼西亚总统白宫晤拜登 与特朗普通电话 推动两国合作](/articles/voa/1011079.md)
 
 11-13 [美众议员沃尔兹被特朗普选为国安顾问 曾提《台湾防卫法》](/articles/voa/1011080.md)
-
-11-13 [歼-35珠海航展亮相—中国隐形战机步入双机时代 专家：飞行员实战短板难超越美国](/articles/voa/1011081.md)
 
