--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-25 [【网络民议】“关门三天损失两千，开门迎检或被罚五万”](/articles/cdt/335144.md)
+
 11-25 [冰川思享号｜幸福者退让，好浓一碗毒鸡汤](/articles/cdt/335147.md)
 
 11-24 [晖常有道｜网友们说出了潮州这次的更多内幕了](/articles/cdt/335154.md)
@@ -598,6 +600,4 @@
 10-17 [张3丰的世界｜一封给走失朋友的信](/articles/cdt/336316.md)
 
 10-17 [真实故事计划｜替父母还债的年轻人](/articles/cdt/336318.md)
-
-10-17 [【网络民议】员工擅自离岗16年，国企急催](/articles/cdt/336320.md)
 
