--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-25 [美国加强在日菲军事部署 三艘航母已驶向亚洲](/articles/dw/1023596.md)
+
+11-25 [乌克兰放宽刑罚 鼓励逃兵重返前线](/articles/dw/1023597.md)
+
 11-25 [必须“适应新的现实”：大众坚持关闭德国工厂计划](/articles/dw/1023598.md)
 
 11-24 [美摄影家在柏林办展 批以色列“种族灭绝”引发争议](/articles/dw/1023599.md)
@@ -596,8 +600,4 @@
 10-25 [习莫会后中印关系将怎样发展？](/articles/dw/1023894.md)
 
 10-25 [香港贫民区拆除改造 原住户五味杂陈](/articles/dw/1023895.md)
-
-10-25 [态度转变：米莱称中国是”非常有趣的贸易伙伴“](/articles/dw/1023896.md)
-
-10-25 [深陷危机：大众在华销量为何大幅下滑？](/articles/dw/1023897.md)
 
