--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-25 [聿文视界：杀人案频传，中国正让其国民处于巨大不安中](/articles/voa/1010779.md)
+
 11-25 [罗马尼亚总统选举爆冷 质疑北约的极右翼候选人意外领跑](/articles/voa/1010780.md)
 
 11-25 [中国气球再度现踪台海上空 7个月来首见](/articles/voa/1010781.md)
@@ -598,6 +600,4 @@
 11-13 [美国航母参加与韩国和日本的军事演习](/articles/voa/1011077.md)
 
 11-13 [台湾的“鹰式”导弹可能已重新武装乌克兰](/articles/voa/1011078.md)
-
-11-13 [印度尼西亚总统白宫晤拜登 与特朗普通电话 推动两国合作](/articles/voa/1011079.md)
 
