--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-25 [苹果CEO库克再度访华 强调中国市场重要性](/articles/dw/1023595.md)
+
 11-25 [美国加强在日菲军事部署 三艘航母已驶向亚洲](/articles/dw/1023596.md)
 
 11-25 [乌克兰放宽刑罚 鼓励逃兵重返前线](/articles/dw/1023597.md)
@@ -598,6 +600,4 @@
 10-25 [越来越多中共高官被指控阅读禁书](/articles/dw/1023893.md)
 
 10-25 [习莫会后中印关系将怎样发展？](/articles/dw/1023894.md)
-
-10-25 [香港贫民区拆除改造 原住户五味杂陈](/articles/dw/1023895.md)
 
