--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+11-25 [客座评论：特朗普会放弃台湾吗？](/articles/dw/1023591.md)
+
+11-25 [DHL货机在立陶宛坠毁 机上人员一死三伤](/articles/dw/1023592.md)
+
+11-25 [马斯克与特朗普的利益冲突](/articles/dw/1023593.md)
+
+11-25 [川普二進宮：雙線作戰還是聯歐抗中？](/articles/dw/1023594.md)
+
 11-25 [苹果CEO库克再度访华 强调中国市场重要性](/articles/dw/1023595.md)
 
 11-25 [美国加强在日菲军事部署 三艘航母已驶向亚洲](/articles/dw/1023596.md)
@@ -592,12 +600,4 @@
 10-26 [以色列：已完成对伊朗的报复性打击](/articles/dw/1023889.md)
 
 10-26 [跨越台海的同婚之路：我們的關係非兩岸縮影](/articles/dw/1023890.md)
-
-10-25 [机会卡：德国的就业移民新政策初见成效](/articles/dw/1023891.md)
-
-10-25 [欧盟：对华电动汽车关税谈判仍有“重大分歧”](/articles/dw/1023892.md)
-
-10-25 [越来越多中共高官被指控阅读禁书](/articles/dw/1023893.md)
-
-10-25 [习莫会后中印关系将怎样发展？](/articles/dw/1023894.md)
 
