--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-25 [胖虎鲨｜天通苑“软肋学”发表两周年](/articles/cdt/335111.md)
+
 11-25 [【异闻观止】卫健委群发短信“再婚夫妻再婚后可再生3个孩子”？官方回应系新政](/articles/cdt/335113.md)
 
 11-25 [倪刃｜多个欧洲国家，已经开始为战争做准备](/articles/cdt/335118.md)
@@ -598,6 +600,4 @@
 10-18 [每日人物｜替父母还债的年轻人](/articles/cdt/336303.md)
 
 10-18 [冰川思享号｜备受内卷折磨的年轻人，正在群嘲这个北大女教授](/articles/cdt/336305.md)
-
-10-18 [每日一语 2024.10.17](/articles/cdt/336307.md)
 
