--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-25 [社民党提名肖尔茨为总理候选人](/articles/dw/1023590.md)
+
 11-25 [客座评论：特朗普会放弃台湾吗？](/articles/dw/1023591.md)
 
 11-25 [DHL货机在立陶宛坠毁 机上人员一死三伤](/articles/dw/1023592.md)
@@ -598,6 +600,4 @@
 10-26 [看向矽谷的AI之島？台灣半導體繁榮背後的貧與富](/articles/dw/1023888.md)
 
 10-26 [以色列：已完成对伊朗的报复性打击](/articles/dw/1023889.md)
-
-10-26 [跨越台海的同婚之路：我們的關係非兩岸縮影](/articles/dw/1023890.md)
 
