--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-25 [每日一语 2024.11.25](/articles/cdt/335103.md)
+
+11-25 [魏春亮说｜警察殴打小学生事件，反转了？](/articles/cdt/335106.md)
+
+11-25 [衣者褚｜我们的软肋，他们的摇钱树](/articles/cdt/335107.md)
+
+11-25 [基本常识｜体操冠军直播跳舞可比当搓澡工强多了](/articles/cdt/335109.md)
+
 11-25 [胖虎鲨｜天通苑“软肋学”发表两周年](/articles/cdt/335111.md)
 
 11-25 [【异闻观止】卫健委群发短信“再婚夫妻再婚后可再生3个孩子”？官方回应系新政](/articles/cdt/335113.md)
@@ -592,12 +600,4 @@
 10-19 [衣者朝新｜最新证据证明，确有老干部“耍特权”](/articles/cdt/336295.md)
 
 10-19 [历史总在押韵｜司马南在开封府直播呼唤包公，说到天子犯法与庶民同罪时被封禁](/articles/cdt/336296.md)
-
-10-18 [星球商业评论｜叮咚一下人就没了](/articles/cdt/336299.md)
-
-10-18 [读宋史的赵大胖｜让校领导带头吃学生食堂，真就那么难吗？](/articles/cdt/336301.md)
-
-10-18 [每日人物｜替父母还债的年轻人](/articles/cdt/336303.md)
-
-10-18 [冰川思享号｜备受内卷折磨的年轻人，正在群嘲这个北大女教授](/articles/cdt/336305.md)
 
