--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-26 [反对中国向白兰地加征关税 欧盟向世贸递交诉状](/articles/dw/1023589.md)
+
 11-25 [社民党提名肖尔茨为总理候选人](/articles/dw/1023590.md)
 
 11-25 [客座评论：特朗普会放弃台湾吗？](/articles/dw/1023591.md)
@@ -598,6 +600,4 @@
 10-26 [美国批准对台湾近20亿美元军售](/articles/dw/1023887.md)
 
 10-26 [看向矽谷的AI之島？台灣半導體繁榮背後的貧與富](/articles/dw/1023888.md)
-
-10-26 [以色列：已完成对伊朗的报复性打击](/articles/dw/1023889.md)
 
