--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-26 [美国国会议员指控香港正沦为全球金融犯罪中心](/articles/voa/1010776.md)
+
 11-25 [为应对特朗普关税和经济增长“保五”，中国或出新刺激政策](/articles/voa/1010777.md)
 
 11-25 [特朗普提名贝森特任财长受投资人欢迎，欧亚股市星期一纷纷上扬](/articles/voa/1010778.md)
@@ -598,6 +600,4 @@
 11-13 [特朗普的国防部长提名人选震惊五角大楼并引发质疑](/articles/voa/1011074.md)
 
 11-13 [帕劳总统赢得连任 指控中国蔑视海域边界](/articles/voa/1011075.md)
-
-11-13 [珠海恶意冲撞事件致35死 中国压制对遇难者的悼念、外媒采访受阻](/articles/voa/1011076.md)
 
