--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-26 [白纸运动两周年 中国异议人士：社会行动需“另辟蹊径”](/articles/voa/1010773.md)
+
+11-26 [“白帝乙型”空天概念战机亮相 展现中国太空竞争野心？](/articles/voa/1010774.md)
+
 11-26 [欧盟官员称与中国就解决电动车关税谈判未接近达成协议](/articles/voa/1010775.md)
 
 11-26 [美国国会议员指控香港正沦为全球金融犯罪中心](/articles/voa/1010776.md)
@@ -596,8 +600,4 @@
 11-14 [中国黑客侵入海外藏人社区网站，盗取信息情报监控藏人](/articles/voa/1011071.md)
 
 11-14 [布林肯保证，特朗普就任前让乌克兰“处于最强地位”](/articles/voa/1011072.md)
-
-11-13 [台湾央行关注特朗普贸易政策可能给台湾带来的风险](/articles/voa/1011073.md)
-
-11-13 [特朗普的国防部长提名人选震惊五角大楼并引发质疑](/articles/voa/1011074.md)
 
