--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-26 [英国议会举行纪念白纸运动两周年活动: 呼吁关注中共的跨国镇压与人权危机](/articles/voa/1010768.md)
+
 11-26 [对中国持批评立场的美国参议员默克利访问台湾](/articles/voa/1010769.md)
 
 11-26 [以色列驻联合国大使：黎巴嫩停火谈判“向前推进”](/articles/voa/1010770.md)
@@ -598,6 +600,4 @@
 11-14 [特朗普取消“出生公民权”可能会有什么后果？](/articles/voa/1011066.md)
 
 11-14 [珠海撞人事件引发民众质疑与维稳措施：社会底层困境再受关注](/articles/voa/1011067.md)
-
-11-14 [特朗普和拜登在白宫会面，讨论权力移交](/articles/voa/1011068.md)
 
