--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -21,6 +21,8 @@
 
 11-25 [【网络民议】“关门三天损失两千，开门迎检或被罚五万”](/articles/cdt/335144.md)
 
+11-26 [【CDT关注】莽莽 x 低音｜破产的城市精英与失败的人生重启](/articles/cdt/335145.md)
+
 11-25 [冰川思享号｜幸福者退让，好浓一碗毒鸡汤](/articles/cdt/335147.md)
 
 11-24 [晖常有道｜网友们说出了潮州这次的更多内幕了](/articles/cdt/335154.md)
@@ -598,6 +600,4 @@
 10-18 [每日一语 2024.10.18](/articles/cdt/336290.md)
 
 10-19 [衣者朝新｜最新证据证明，确有老干部“耍特权”](/articles/cdt/336295.md)
-
-10-19 [历史总在押韵｜司马南在开封府直播呼唤包公，说到天子犯法与庶民同罪时被封禁](/articles/cdt/336296.md)
 
