--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-26 [白紙兩週年：中國能迎來另一場大規模抗爭嗎？](/articles/dw/1023587.md)
+
 11-26 [特朗普已经提名了哪些内阁成员？](/articles/dw/1023588.md)
 
 11-26 [反对中国向白兰地加征关税 欧盟向世贸递交诉状](/articles/dw/1023589.md)
@@ -598,6 +600,4 @@
 10-26 [俄军挺进战略要地 缺弹乌军誓守家园](/articles/dw/1023885.md)
 
 10-26 [以色列：完成对伊朗报复性打击  伊朗：准备应对以色列“侵略“](/articles/dw/1023886.md)
-
-10-26 [美国批准对台湾近20亿美元军售](/articles/dw/1023887.md)
 
