--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-26 [巴基斯坦警方与被监禁的前总理支持者发生冲突](/articles/voa/1010761.md)
+
 11-26 [珠海撞人惨案后，美参议员跨党推出法案，反击北京审查制度并推动中国人民言论自由](/articles/voa/1010762.md)
 
 11-26 [白宫：拜登将参加特朗普的就职典礼](/articles/voa/1010763.md)
@@ -598,6 +600,4 @@
 11-14 [中国重新译注《古兰经》引发争议：通过伊斯兰教本土化加强宗教干预？](/articles/voa/1011059.md)
 
 11-14 [特朗普提名参议员鲁比奥担任国务卿](/articles/voa/1011060.md)
-
-11-14 [特朗普宣布前众议员加巴德将出任国家情报总监](/articles/voa/1011061.md)
 
