--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-26 [特朗普誓言对中国加征10%、对加拿大和墨西哥加征25%的新关税](/articles/voa/1010760.md)
+
 11-26 [巴基斯坦警方与被监禁的前总理支持者发生冲突](/articles/voa/1010761.md)
 
 11-26 [珠海撞人惨案后，美参议员跨党推出法案，反击北京审查制度并推动中国人民言论自由](/articles/voa/1010762.md)
@@ -598,6 +600,4 @@
 11-14 [马斯克会像中国所希望的那样，成为下一个基辛格吗？](/articles/voa/1011058.md)
 
 11-14 [中国重新译注《古兰经》引发争议：通过伊斯兰教本土化加强宗教干预？](/articles/voa/1011059.md)
-
-11-14 [特朗普提名参议员鲁比奥担任国务卿](/articles/voa/1011060.md)
 
