--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-26 [特朗普打击移民危及美国科技行业](/articles/nyt/1042173.md)
+
 11-26 [前舞蹈演员起诉神韵艺术团强迫劳动和诱拐儿童](/articles/nyt/1042174.md)
 
 11-26 [特朗普内阁：“美国优先”表面下的多重意识形态碰撞](/articles/nyt/1042175.md)
@@ -598,6 +600,4 @@
 8-16 [“她为什么不参选？”格温·沃尔兹，能力超群的政治家配偶](/articles/nyt/1042471.md)
 
 8-16 [关于时报对神韵艺术团的调查，你需要知道的五个要点](/articles/nyt/1042472.md)
-
-8-16 [关于法轮功运动，你应该了解的](/articles/nyt/1042473.md)
 
