--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-26 [呼吁保护妇女免遭暴力侵害 示威者遭土耳其警方拘捕](/articles/voa/1010757.md)
+
+11-26 [美国对谷歌在线广告帝国的反垄断审判接近尾声](/articles/voa/1010758.md)
+
+11-26 [美国农业团体盼特朗普豁免其工人免遭驱逐](/articles/voa/1010759.md)
+
 11-26 [特朗普誓言对中国加征10%、对加拿大和墨西哥加征25%的新关税](/articles/voa/1010760.md)
 
 11-26 [巴基斯坦警方与被监禁的前总理支持者发生冲突](/articles/voa/1010761.md)
@@ -594,10 +600,4 @@
 11-14 [美国政府发表声明：发现中国针对商业电信基础设施的网络间谍活动](/articles/voa/1011055.md)
 
 11-14 [南达科他州参议员约翰·图恩被参议院共和党人选为多数党领袖](/articles/voa/1011056.md)
-
-11-14 [特朗普将提名众议员马特·盖茨担任司法部长](/articles/voa/1011057.md)
-
-11-14 [马斯克会像中国所希望的那样，成为下一个基辛格吗？](/articles/voa/1011058.md)
-
-11-14 [中国重新译注《古兰经》引发争议：通过伊斯兰教本土化加强宗教干预？](/articles/voa/1011059.md)
 
