--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-26 [一千只羊群在燃烧｜“亲人弥留之际，宿管阿姨却不开门”——像极了这个时代的隐喻](/articles/cdt/335087.md)
+
+11-26 [极昼工作室｜为丈夫申请工伤死亡认定的583天](/articles/cdt/335092.md)
+
 11-26 [建设性意见｜对大学生的圈养式管理已经到了变态的程度](/articles/cdt/335099.md)
 
 11-25 [每日一语 2024.11.25](/articles/cdt/335103.md)
@@ -596,8 +600,4 @@
 10-19 [昌记负食｜回人大记](/articles/cdt/336268.md)
 
 10-19 [【CDT周报】第191期：我们想要好好说话不说“黑话烂梗”，可您不让啊](/articles/cdt/336285.md)
-
-10-20 [【CDT报告汇】自由之家：全球网络自由度持续恶化，中国连续十年垫底（外二篇）](/articles/cdt/336286.md)
-
-10-18 [每日一语 2024.10.18](/articles/cdt/336290.md)
 
