--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-26 [债务刹车：维持还是松绑？](/articles/dw/1023583.md)
+
 11-26 [中国“芯”？中国“心”！华为再推新手机](/articles/dw/1023584.md)
 
 11-26 [特朗普称上任即对中国加征10%、墨西哥加拿大25%的关税](/articles/dw/1023585.md)
@@ -598,6 +600,4 @@
 10-27 [特朗普的贸易政策已让德国汽车巨头惶恐不安](/articles/dw/1023881.md)
 
 10-26 [金砖峰会后 俄罗斯空袭基辅、第聂伯罗](/articles/dw/1023882.md)
-
-10-26 [肖尔茨警告伊朗勿“加剧紧张局势”   伊朗官媒淡化袭击严重性](/articles/dw/1023883.md)
 
