--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-26 [美国军机过航台海空域，解放军称出动海空兵力“跟监警戒”](/articles/voa/1010754.md)
+
+11-26 [菲国家调查局传唤副总统就她有关刺杀总统言论进行调查](/articles/voa/1010755.md)
+
 11-26 [特朗普在上任前免除了联邦起诉](/articles/voa/1010756.md)
 
 11-26 [呼吁保护妇女免遭暴力侵害 示威者遭土耳其警方拘捕](/articles/voa/1010757.md)
@@ -596,8 +600,4 @@
 11-14 [特朗普提名鲁比奥出任国务卿,两党都有议员表达支持](/articles/voa/1011052.md)
 
 11-14 [以色列攻击导致加沙3名儿童死亡 黎巴嫩6人丧生](/articles/voa/1011053.md)
-
-11-14 [拜登、习近平将在秘鲁APEC峰会期间在利马会晤](/articles/voa/1011054.md)
-
-11-14 [美国政府发表声明：发现中国针对商业电信基础设施的网络间谍活动](/articles/voa/1011055.md)
 
