--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-26 [海外港人谴责港人治港新定义：违反中英联合声明](/articles/voa/1010753.md)
+
 11-26 [美国军机过航台海空域，解放军称出动海空兵力“跟监警戒”](/articles/voa/1010754.md)
 
 11-26 [菲国家调查局传唤副总统就她有关刺杀总统言论进行调查](/articles/voa/1010755.md)
@@ -598,6 +600,4 @@
 11-14 [特朗普外交团队初具规模，鹰派人物将主导对华政策](/articles/voa/1011051.md)
 
 11-14 [特朗普提名鲁比奥出任国务卿,两党都有议员表达支持](/articles/voa/1011052.md)
-
-11-14 [以色列攻击导致加沙3名儿童死亡 黎巴嫩6人丧生](/articles/voa/1011053.md)
 
