--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-27 [联合国谴责塔利班频繁扣押记者，俄准备将塔利班移除恐怖组织名单](/articles/voa/1010752.md)
+
 11-26 [海外港人谴责港人治港新定义：违反中英联合声明](/articles/voa/1010753.md)
 
 11-26 [美国军机过航台海空域，解放军称出动海空兵力“跟监警戒”](/articles/voa/1010754.md)
@@ -598,6 +600,4 @@
 11-14 [特朗普新防长人选为美国优先派 台防长：避免台海战争符合美台共同利益](/articles/voa/1011050.md)
 
 11-14 [特朗普外交团队初具规模，鹰派人物将主导对华政策](/articles/voa/1011051.md)
-
-11-14 [特朗普提名鲁比奥出任国务卿,两党都有议员表达支持](/articles/voa/1011052.md)
 
