--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-27 [易富贤：特朗普再加码，中国应如何应对美国新关税政策](/articles/voa/1010751.md)
+
 11-27 [联合国谴责塔利班频繁扣押记者，俄准备将塔利班移除恐怖组织名单](/articles/voa/1010752.md)
 
 11-26 [海外港人谴责港人治港新定义：违反中英联合声明](/articles/voa/1010753.md)
@@ -598,6 +600,4 @@
 11-14 [联合国谴责对黎巴嫩维和部队的袭击 警告以色列立新法迫使救济机构停摆的后果](/articles/voa/1011049.md)
 
 11-14 [特朗普新防长人选为美国优先派 台防长：避免台海战争符合美台共同利益](/articles/voa/1011050.md)
-
-11-14 [特朗普外交团队初具规模，鹰派人物将主导对华政策](/articles/voa/1011051.md)
 
