--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-27 [听晖道来｜今天，为十六年前的那个年轻人写一点东西](/articles/cdt/335081.md)
+
+11-27 [【404维修站】地球公民金建国｜一则通报，让打人者成了英雄](/articles/cdt/335082.md)
+
 11-26 [一千只羊群在燃烧｜“亲人弥留之际，宿管阿姨却不开门”——像极了这个时代的隐喻](/articles/cdt/335087.md)
 
 11-26 [极昼工作室｜为丈夫申请工伤死亡认定的583天](/articles/cdt/335092.md)
@@ -596,8 +600,4 @@
 10-20 [【重温】维吾尔学者伊力哈木·土赫提被捕十周年：2014年分裂国家案辩护词](/articles/cdt/336264.md)
 
 10-20 [旧闻评论｜能抵制司马南，为啥不能抵制杨笠？](/articles/cdt/336266.md)
-
-10-19 [昌记负食｜回人大记](/articles/cdt/336268.md)
-
-10-19 [【CDT周报】第191期：我们想要好好说话不说“黑话烂梗”，可您不让啊](/articles/cdt/336285.md)
 
