--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 11-27 [每日一语 2024.11.26](/articles/cdt/335074.md)
 
+11-27 [巴九灵｜浙江与“远洋捕捞”斗智斗勇](/articles/cdt/335078.md)
+
 11-27 [听晖道来｜今天，为十六年前的那个年轻人写一点东西](/articles/cdt/335081.md)
 
 11-27 [【404维修站】地球公民金建国｜一则通报，让打人者成了英雄](/articles/cdt/335082.md)
@@ -598,6 +600,4 @@
 10-20 [每日一语 2024.10.19](/articles/cdt/336256.md)
 
 10-20 [UltraViolet 紫外｜致新同学：当多元性别青年初入大学校园](/articles/cdt/336259.md)
-
-10-20 [Economics Goethe｜阿西莫格鲁演讲：国家为何失败？（译文删减的中国部分已补全）](/articles/cdt/336261.md)
 
