--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-27 [一名货运代理公司创始人对串谋非法向被制裁中国公司出口货物的指控认罪](/articles/voa/1010747.md)
+
+11-27 [缅甸反政府武装占领边境重镇和稀土矿业中心](/articles/voa/1010748.md)
+
 11-27 [冲出重围 跨越水门桥：陆战一师老兵回首长津湖战役](/articles/voa/1010749.md)
 
 11-27 [俄乌战局分析：乌军压力增加，俄军攻占土地面积创今年最高记录](/articles/voa/1010750.md)
@@ -596,8 +600,4 @@
 11-14 [国际原子能机构负责人访问伊朗 寻求外交解决方案](/articles/voa/1011045.md)
 
 11-14 [台官员：未向特朗普阵营提军购清单，乐愿与美讨论加强威慑](/articles/voa/1011046.md)
-
-11-14 [特朗普欲重建强大美军对中国来说意味着什么？](/articles/voa/1011047.md)
-
-11-14 [路透社：特朗普团队正在起草五角大楼官员解雇名单](/articles/voa/1011048.md)
 
