--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-27 [芬太尼，特朗普的最新对华外交武器？](/articles/nyt/1042170.md)
+
 11-27 [面对特朗普关税，中国会对美国发起货币战争吗？](/articles/nyt/1042171.md)
 
 11-26 [“远洋捕捞”式执法猖獗凸显中国地方财政困境](/articles/nyt/1042172.md)
@@ -598,6 +600,4 @@
 8-19 [日本需要外国劳工，但新移民想留下来并不容易](/articles/nyt/1042468.md)
 
 8-19 [泰国新任总理佩通坦是谁？](/articles/nyt/1042469.md)
-
-8-16 [俄乌战场戏剧性转变：乌克兰入侵俄领土将如何影响战局](/articles/nyt/1042470.md)
 
