--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-27 [媒體：中國防長董軍涉貪腐遭調查](/articles/dw/1023578.md)
+
 11-27 [女性發起「性罷工」：韓國4B運動如何影響美國？](/articles/dw/1023579.md)
 
 11-26 [乌克兰更新：俄罗斯迅速推进 发起创纪录无人机袭击](/articles/dw/1023580.md)
@@ -598,6 +600,4 @@
 10-27 [男性避孕：正在兴起的产业革命](/articles/dw/1023876.md)
 
 10-27 [人工智能：德国还能赶上世界吗？](/articles/dw/1023877.md)
-
-10-27 [中资纷纷抛售撤离 波尔多酒庄黄金时代告终](/articles/dw/1023878.md)
 
