--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-27 [华为发布Mate 70系列手机，蚕食苹果中国市场](/articles/nyt/1042169.md)
+
 11-27 [芬太尼，特朗普的最新对华外交武器？](/articles/nyt/1042170.md)
 
 11-27 [面对特朗普关税，中国会对美国发起货币战争吗？](/articles/nyt/1042171.md)
@@ -598,6 +600,4 @@
 8-19 [《老友记》马修·佩里最后的日子：每天至少六针氯胺酮](/articles/nyt/1042467.md)
 
 8-19 [日本需要外国劳工，但新移民想留下来并不容易](/articles/nyt/1042468.md)
-
-8-19 [泰国新任总理佩通坦是谁？](/articles/nyt/1042469.md)
 
