--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-27 [中国恒大投资者“小心翼翼地”集结 施压当局促交代调查进展](/articles/voa/1010737.md)
+
 11-27 [特朗普提名国际贸易律师格里尔出任美国贸易代表](/articles/voa/1010738.md)
 
 11-27 [以色列打击叙利亚霍姆斯省境内目标](/articles/voa/1010739.md)
@@ -598,6 +600,4 @@
 11-15 [俄罗斯高官参观珠海航展 关注中国军事技术的发展](/articles/voa/1011035.md)
 
 11-15 [特朗普就职前，美日韩在东亚举行最后一轮三国联合军演](/articles/voa/1011036.md)
-
-11-15 [台湾退役舰长珠海航展称“中国强”退役军官成中共内宣利器引发台湾国安隐忧](/articles/voa/1011037.md)
 
