--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-27 [【CDT关注】颜纯钩｜国家失义政府失能，社会失序百姓失魂——一个没有凝聚力的国家没有未来](/articles/cdt/335071.md)
+
 11-27 [每日一语 2024.11.26](/articles/cdt/335074.md)
 
 11-27 [巴九灵｜浙江与“远洋捕捞”斗智斗勇](/articles/cdt/335078.md)
@@ -598,6 +600,4 @@
 10-21 [每日一语 2024.10.20](/articles/cdt/336250.md)
 
 10-20 [每日一语 2024.10.19](/articles/cdt/336256.md)
-
-10-20 [UltraViolet 紫外｜致新同学：当多元性别青年初入大学校园](/articles/cdt/336259.md)
 
