--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-27 [关税威胁凸显特朗普颠覆全球贸易决心](/articles/nyt/1042168.md)
+
 11-27 [华为发布Mate 70系列手机，蚕食苹果中国市场](/articles/nyt/1042169.md)
 
 11-27 [芬太尼，特朗普的最新对华外交武器？](/articles/nyt/1042170.md)
@@ -598,6 +600,4 @@
 8-19 [企业为中美贸易战下一阶段做准备](/articles/nyt/1042466.md)
 
 8-19 [《老友记》马修·佩里最后的日子：每天至少六针氯胺酮](/articles/nyt/1042467.md)
-
-8-19 [日本需要外国劳工，但新移民想留下来并不容易](/articles/nyt/1042468.md)
 
