--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-27 [董军任防长未及一年 今年三次出访](/articles/voa/1010735.md)
+
 11-27 [金融时报：中国防长董军因腐败接受调查](/articles/voa/1010736.md)
 
 11-27 [中国恒大投资者“小心翼翼地”集结 施压当局促交代调查进展](/articles/voa/1010737.md)
@@ -598,6 +600,4 @@
 11-15 [中国应用程序席卷东南亚对当地是福还是祸？](/articles/voa/1011033.md)
 
 11-15 [石坡茂筹划与特朗普会面 新政局下美日同盟面临机遇与挑战](/articles/voa/1011034.md)
-
-11-15 [俄罗斯高官参观珠海航展 关注中国军事技术的发展](/articles/voa/1011035.md)
 
