--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-27 [木白文笔平平｜某省某地把“天”卖了，民众生计会有变化吗？](/articles/cdt/335068.md)
+
 11-27 [【CDT关注】颜纯钩｜国家失义政府失能，社会失序百姓失魂——一个没有凝聚力的国家没有未来](/articles/cdt/335071.md)
 
 11-27 [每日一语 2024.11.26](/articles/cdt/335074.md)
@@ -598,6 +600,4 @@
 10-21 [唐师三百手｜抵制杨笠的人，大概也在愐怀辛瓦尔](/articles/cdt/336246.md)
 
 10-21 [刑辩中坚｜沈亚川：每个法院都应该有个大法庭——兼论近亲属在庭旁听权的法律意义](/articles/cdt/336248.md)
-
-10-21 [每日一语 2024.10.20](/articles/cdt/336250.md)
 
