--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-27 [中国防长董军传遭贪腐调查 网民追问:连续三任都进去吗?](/articles/voa/1010729.md)
+
+11-27 [韩乌同意分享朝俄情报，但韩国民意不支持向基辅提供武器](/articles/voa/1010730.md)
+
 11-27 [薄熙来之子在台湾成婚 中国国台办拒绝发表评论](/articles/voa/1010731.md)
 
 11-27 [以色列与真主党停火生效 平民开始返回黎巴嫩南部](/articles/voa/1010732.md)
@@ -596,8 +600,4 @@
 11-15 [北约和欧盟督促中国帮助让朝鲜停止支持俄罗斯侵乌战争](/articles/voa/1011027.md)
 
 11-15 [分析: 若巴基斯坦不改善安全，中巴经济走廊项目将进入休眠状态](/articles/voa/1011028.md)
-
-11-15 [台湾称尚未向美提具体军备采购清单 专家：有高度可能在特朗普上任后前几个月表明意愿](/articles/voa/1011029.md)
-
-11-15 [台湾军事投资八年增长逾80% 国安官员: 台美对强化威慑深具共识](/articles/voa/1011030.md)
 
