--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,22 @@
 美国之音
 ------
 
+11-28 [物价压力仍顽固，美国通胀指标上扬](/articles/voa/1010713.md)
+
+11-28 [德情报主管：俄罗斯的破坏行动有可能导致北约动用第五条共同防御条款](/articles/voa/1010714.md)
+
+11-28 [极右翼候选人选票领先后 罗马尼亚当局将调查外国干涉](/articles/voa/1010715.md)
+
+11-28 [拜登将访问安哥拉，强调“洛比托走廊”的重要性，以此在非洲对抗中国](/articles/voa/1010716.md)
+
+11-28 [美中换囚：他们都是谁？](/articles/voa/1010717.md)
+
+11-28 [美两党议员欢迎被中国不当拘押的美国公民获释回家；美国务院调低前往中国的旅行警告](/articles/voa/1010718.md)
+
+11-28 [特朗普为二度执政加快准备,对台政策是否有变引关注](/articles/voa/1010719.md)
+
+11-28 [拜登造访安哥拉: 美中在非洲竞争的新战线?](/articles/voa/1010720.md)
+
 11-28 [数据显示外国智能手机10月在华销量暴跌44%](/articles/voa/1010721.md)
 
 11-28 [推特上的中国：北京释放三名在押美国公民，活动人士称更多政治犯需被解救](/articles/voa/1010722.md)
@@ -584,20 +600,4 @@
 11-16 [中国人权律师丁家喜、维权人士张海涛获独立中文笔会颁奖 关切两人狱中处境](/articles/voa/1011011.md)
 
 11-16 [中国经济依然脆弱，特朗普因素给中国经济复苏蒙上阴影](/articles/voa/1011012.md)
-
-11-15 [美日韩领导人将在APEC峰会期间举行三边峰会，对朝鲜威胁作出有协调的反应](/articles/voa/1011013.md)
-
-11-15 [中国新房价格十月同比持续下跌但环比跌幅缩小，似有趋稳迹象](/articles/voa/1011014.md)
-
-11-15 [高官贪腐前赴后继，中国前农业部长唐仁健被“双开”](/articles/voa/1011015.md)
-
-11-15 [中共“红三代”薄瓜瓜传将结亲台湾地方望族孙女](/articles/voa/1011016.md)
-
-11-15 [路透：台湾总统赖清德数周内出访 計劃过境夏威夷、关岛](/articles/voa/1011017.md)
-
-11-15 [斯里兰卡总统的左翼联盟在提前选举中赢得多数席位](/articles/voa/1011018.md)
-
-11-15 [新华社旗下记者揭弊挨打 中国记协发声：维护正当采访合法权益](/articles/voa/1011019.md)
-
-11-15 [朝鲜领导人下令大规模生产自杀式无人机](/articles/voa/1011020.md)
 
