--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-28 [大众汽车宣布退出新疆](/articles/nyt/1042166.md)
+
 11-27 [以色列与黎巴嫩真主党达成停火协议](/articles/nyt/1042167.md)
 
 11-27 [关税威胁凸显特朗普颠覆全球贸易决心](/articles/nyt/1042168.md)
@@ -598,6 +600,4 @@
 8-20 [《谎言的囚徒》：被中国监禁20年的中情局特工](/articles/nyt/1042464.md)
 
 8-20 [“中国经济奇迹”梦醒](/articles/nyt/1042465.md)
-
-8-19 [企业为中美贸易战下一阶段做准备](/articles/nyt/1042466.md)
 
