--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-28 [两位总统、两套政策：“忽左忽右”的美国](/articles/nyt/1042162.md)
+
 11-28 [中国对抗特朗普的新招数：发起“供应链战争”](/articles/nyt/1042163.md)
 
 11-28 [中美换囚：三名美国人获释，一人曾为FBI线人](/articles/nyt/1042164.md)
@@ -598,6 +600,4 @@
 8-21 [《黑神话：悟空》爆火背后：言论管控令海外玩家不满](/articles/nyt/1042460.md)
 
 8-21 [拜登“告别”演说：“美国，我为你竭尽全力”](/articles/nyt/1042461.md)
-
-8-20 [希拉里为贺锦丽站台：这次能否“打破玻璃天花板”？](/articles/nyt/1042462.md)
 
