--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-29 [全球首创，颇具争议：澳大利亚议会通过法律禁止16岁以下儿童使用社交媒体](/articles/voa/1010698.md)
+
+11-29 [大陆高校师生访台避谈敏感议题 肯定台湾学子的友善](/articles/voa/1010699.md)
+
+11-29 [以色列指责真主党违反停火协议，以军炮击黎巴嫩南部致两人受伤](/articles/voa/1010700.md)
+
 11-29 [蒲黄榆说：末世乱局下的希望-中国白纸革命两周年回顾](/articles/voa/1010701.md)
 
 11-29 [中柬合作再抓获五百余赌诈嫌犯，首批240人被押解回中国](/articles/voa/1010702.md)
@@ -594,10 +600,4 @@
 11-16 [共和党议员对特朗普能够实现结束俄乌战争的目标抱持乐观](/articles/voa/1010996.md)
 
 11-16 [独立中文笔会授予女权活动人士李翘楚、独立记者黄雪琴“林昭纪念奖”](/articles/voa/1010997.md)
-
-11-16 [美日韩领导人三边峰会联合声明：反对南中国海非法海洋权利主张，呼吁和平解决台海两岸问题](/articles/voa/1010998.md)
-
-11-16 [美日韩领导人三边峰会联合声明：反对南中国海非法海洋权利主张，呼吁和平解决台海两岸问题](/articles/voa/1010999.md)
-
-11-16 [朔尔茨与普京直接通话，要求俄罗斯从乌克兰撤军；欧尔班呼吁欧盟放弃对俄制裁](/articles/voa/1011000.md)
 
