--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-29 [流亡维吾尔人和专家欢迎大众汽车迫于人权压力撤出新疆](/articles/voa/1010696.md)
+
+11-29 [推特上的中国：习近平“公开羞辱”苗华，一定是“非常愤怒”](/articles/voa/1010697.md)
+
 11-29 [全球首创，颇具争议：澳大利亚议会通过法律禁止16岁以下儿童使用社交媒体](/articles/voa/1010698.md)
 
 11-29 [大陆高校师生访台避谈敏感议题 肯定台湾学子的友善](/articles/voa/1010699.md)
@@ -596,8 +600,4 @@
 11-16 [拜登秘鲁三会习近平，即将回归的特朗普才是真正的焦点？](/articles/voa/1010994.md)
 
 11-16 [拜登会晤韩日领导人 称赞三方合作 共同应对各种挑战](/articles/voa/1010995.md)
-
-11-16 [共和党议员对特朗普能够实现结束俄乌战争的目标抱持乐观](/articles/voa/1010996.md)
-
-11-16 [独立中文笔会授予女权活动人士李翘楚、独立记者黄雪琴“林昭纪念奖”](/articles/voa/1010997.md)
 
