--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-29 [美中换囚后 三名美国公民抵达德克萨斯州](/articles/voa/1010693.md)
+
+11-29 [就波罗的海电缆断裂事件 瑞典正式要求中国配合](/articles/voa/1010694.md)
+
+11-29 [特朗普2.0将至 越南会步中国后尘遭关税重击吗？](/articles/voa/1010695.md)
+
 11-29 [流亡维吾尔人和专家欢迎大众汽车迫于人权压力撤出新疆](/articles/voa/1010696.md)
 
 11-29 [推特上的中国：习近平“公开羞辱”苗华，一定是“非常愤怒”](/articles/voa/1010697.md)
@@ -594,10 +600,4 @@
 11-16 [美国如何移交总统权力](/articles/voa/1010991.md)
 
 11-16 [援俄朝鲜士兵家属忍受着恐惧和焦虑](/articles/voa/1010992.md)
-
-11-16 [与习近平会面前夕，拜登与台湾APEC代表林信义简短晤谈](/articles/voa/1010993.md)
-
-11-16 [拜登秘鲁三会习近平，即将回归的特朗普才是真正的焦点？](/articles/voa/1010994.md)
-
-11-16 [拜登会晤韩日领导人 称赞三方合作 共同应对各种挑战](/articles/voa/1010995.md)
 
