--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-29 [波罗的海电缆断裂，中国商船被欧盟船只包围监视](/articles/nyt/1042159.md)
+
 11-29 [“黑心卫生巾”：中国女性呼吁抵制劣质卫生巾](/articles/nyt/1042160.md)
 
 11-29 [解放军高层再次震荡：中央军委委员苗华被停职](/articles/nyt/1042161.md)
@@ -598,6 +600,4 @@
 8-22 [“自由更重要”：中国“自驾游阿姨”苏敏宣布离婚](/articles/nyt/1042457.md)
 
 8-21 [奥巴马与贺锦丽：志趣相投、投桃报李](/articles/nyt/1042458.md)
-
-8-21 [拜登批准机密核武战略，重点关注中国威胁](/articles/nyt/1042459.md)
 
