--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-29 [柳井正首度表态称“不使用新疆棉” 优衣库面临被中国抵制的风险](/articles/voa/1010684.md)
+
 11-29 [CPTPP台湾入会案未获共识 哥斯达黎加受邀加入](/articles/voa/1010685.md)
 
 11-29 [中共官媒《光明日报》前评论部副主任董郁玉被以“间谍罪”判刑七年](/articles/voa/1010686.md)
@@ -598,6 +600,4 @@
 11-16 [俄乌战争1000天，七国集团重申挺乌挺到底要俄罗斯付出沉重代价](/articles/voa/1010982.md)
 
 11-16 [专访野夫：一场低调民主政治实验的夭折和地方维稳体制布局](/articles/voa/1010983.md)
-
-11-16 [美中芯片战再升级? 专家:特朗普对华制裁恐扩及14纳米成熟制程](/articles/voa/1010984.md)
 
