--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-29 [每日一语 2024.11.29](/articles/cdt/335009.md)
+
+11-29 [基本常识｜不管想不想打，2年内肯定是打不起来了](/articles/cdt/335011.md)
+
 11-29 [风声OPINION｜用人单位只招“985”“211”，招聘歧视为何人人反感却被全社会接纳？](/articles/cdt/335024.md)
 
 11-29 [南风窗｜从高空坠落的杂技夫妻](/articles/cdt/335027.md)
@@ -596,8 +600,4 @@
 10-22 [谷雨实验室｜史铁生救不了年轻人](/articles/cdt/336215.md)
 
 10-22 [【404文库】凤凰网｜第一批房价下跌的夫妻，已经离婚了](/articles/cdt/336218.md)
-
-10-22 [律侠普法｜生育问题启动抽样调查：让年轻小伙敢结婚，让年轻女人敢怀孕](/articles/cdt/336220.md)
-
-10-22 [每日一语 2024.10.21](/articles/cdt/336225.md)
 
