--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-29 [优衣库总裁称不使用新疆棉 中国社媒呼吁抵制](/articles/dw/1023554.md)
+
+11-29 [中国官媒资深记者董郁玉被以间谍罪判刑七年](/articles/dw/1023555.md)
+
 11-29 [港人看川普重返白宮：盼延續「避風港」計劃](/articles/dw/1023556.md)
 
 11-29 [客座評論：「中國香港」樣子如何，日子也將如何](/articles/dw/1023557.md)
@@ -596,8 +600,4 @@
 10-30 [歐盟正式對華電動車加徵關稅 中方：不接受](/articles/dw/1023852.md)
 
 10-30 [“风险太高” 苏黎世艺术大学终止与哈工大合作办学](/articles/dw/1023853.md)
-
-10-29 [彭博社：印度iPhone出口激增](/articles/dw/1023854.md)
-
-10-29 [记录台北：居酒屋里的两岸关系](/articles/dw/1023855.md)
 
