--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,10 @@
 
 11-29 [基本常识｜不管想不想打，2年内肯定是打不起来了](/articles/cdt/335011.md)
 
+11-29 [黑噪音｜大国崩溃的迹象](/articles/cdt/335013.md)
+
+11-29 [一千只羊群在燃烧｜「开滴滴也要感恩吗」——学生群体，为什么是当下最坚实的保守力量](/articles/cdt/335015.md)
+
 11-29 [风声OPINION｜用人单位只招“985”“211”，招聘歧视为何人人反感却被全社会接纳？](/articles/cdt/335024.md)
 
 11-29 [南风窗｜从高空坠落的杂技夫妻](/articles/cdt/335027.md)
@@ -596,8 +600,4 @@
 10-23 [【立此存照】南方都市报｜任上落马的北京最年轻副市长被“双开”，骗取经济学博士学位](/articles/cdt/336177.md)
 
 10-23 [【404文库】范晓｜金沙江虎跳峡水电工程四大害](/articles/cdt/336210.md)
-
-10-22 [谷雨实验室｜史铁生救不了年轻人](/articles/cdt/336215.md)
-
-10-22 [【404文库】凤凰网｜第一批房价下跌的夫妻，已经离婚了](/articles/cdt/336218.md)
 
