--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-30 [美国谴责中国以间谍罪名将资深记者董郁玉判刑(声明全文)](/articles/voa/1010674.md)
+
 11-30 [立陶宛驱逐三名中国外交官](/articles/voa/1010675.md)
 
 11-30 [在中国拉美影响力日益增强之际，巴拉圭誓言维护与台湾的关系](/articles/voa/1010676.md)
@@ -598,6 +600,4 @@
 11-17 [日本自卫队明年将与美国海军陆战队一起在澳大利亚训练](/articles/voa/1010972.md)
 
 11-17 [以色列军队深入黎巴嫩之际 闪光弹袭击内塔尼亚胡宅邸](/articles/voa/1010973.md)
-
-11-17 [特朗普提名石油行业CEO赖特出任能源部长](/articles/voa/1010974.md)
 
