--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -29,6 +29,8 @@
 
 11-28 [青年志Youthology｜做一片安全、好用的卫生巾，很难吗？](/articles/cdt/335060.md)
 
+11-30 [【CDT报告汇】谷歌新闻屏蔽上千家“大外宣”网站（外二篇）](/articles/cdt/335061.md)
+
 11-27 [关胖本胖｜封杀擦边冠军，激怒全国首富，字节的瓜越吃越大…](/articles/cdt/335066.md)
 
 11-27 [木白文笔平平｜某省某地把“天”卖了，民众生计会有变化吗？](/articles/cdt/335068.md)
@@ -598,6 +600,4 @@
 10-23 [【立此存照、404文库】｜公安局原副局长涉黑恶犯罪，妻子、姐姐同为犯罪集团头目，警方征集线索最高奖10万](/articles/cdt/336176.md)
 
 10-23 [【立此存照】南方都市报｜任上落马的北京最年轻副市长被“双开”，骗取经济学博士学位](/articles/cdt/336177.md)
-
-10-23 [【404文库】范晓｜金沙江虎跳峡水电工程四大害](/articles/cdt/336210.md)
 
