--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-30 [墨西哥当局突击查抄首都“义乌城”并誓言在全国打击假冒产品](/articles/voa/1010663.md)
+
 11-30 [加拿大总理特鲁多抵达佛罗里达州会晤当选总统特朗普](/articles/voa/1010664.md)
 
 11-30 [国际原子能机构：伊朗将开始使用数千台先进离心机进行铀浓缩](/articles/voa/1010665.md)
@@ -598,6 +600,4 @@
 11-18 [经过1000天的艰苦战争，俄罗斯进一步深入乌克兰](/articles/voa/1010961.md)
 
 11-18 [教宗方济各呼吁调查以色列对加沙的攻击是否构成“种族灭绝”](/articles/voa/1010962.md)
-
-11-18 [拜登成为首位访问亚马逊雨林的美国现任总统](/articles/voa/1010963.md)
 
