--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -17,6 +17,8 @@
 
 11-29 [一千只羊群在燃烧｜「开滴滴也要感恩吗」——学生群体，为什么是当下最坚实的保守力量](/articles/cdt/335015.md)
 
+11-30 [【CDT周报】第197期：中国恢复对日免签，到底还恨不恨？在线等](/articles/cdt/335020.md)
+
 11-29 [风声OPINION｜用人单位只招“985”“211”，招聘歧视为何人人反感却被全社会接纳？](/articles/cdt/335024.md)
 
 11-29 [南风窗｜从高空坠落的杂技夫妻](/articles/cdt/335027.md)
@@ -598,6 +600,4 @@
 10-23 [常识流通处｜为什么有这么多人共情辛瓦尔？](/articles/cdt/336164.md)
 
 10-23 [竹不倒｜彻底不在乎吃相了？普通人老百姓瑟瑟发抖](/articles/cdt/336166.md)
-
-10-24 [【404文库】“欠薪问题一直是一个顽疾，为什么总是解决不了这个问题？”（外二篇）](/articles/cdt/336171.md)
 
