--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-1 [每日一语 2024.11.29](/articles/cdt/334980.md)
+
+12-1 [【CDT关注】中国媒体人董郁玉因“间谍罪”判刑七年，家属声明中文翻译](/articles/cdt/334982.md)
+
 12-1 [先生制造｜老师，你要走了吗？](/articles/cdt/334984.md)
 
 12-1 [【CDT月度视频】十一月之声（2024）——“一路都被撞没了，估计一圈都没了”](/articles/cdt/334988.md)
@@ -596,8 +600,4 @@
 10-24 [每日一语 2024.10.23](/articles/cdt/336145.md)
 
 10-24 [【CDT关注】WOMEN我们｜软肋](/articles/cdt/336151.md)
-
-10-24 [三辉图书｜在缅甸我们有想写什么就写什么的自由，只是没有公开出版的自由](/articles/cdt/336153.md)
-
-10-23 [新新默存｜艾晓明：看见曾经的我们](/articles/cdt/336157.md)
 
