--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-1 [以色列空袭加沙导致5人死亡 其中包括慈善机构世界中央厨房的员工](/articles/voa/1010653.md)
+
+12-1 [塑料污染危机条约会议将于韩国闭幕 中国为最大塑料产品出口国](/articles/voa/1010654.md)
+
 12-1 [叙利亚政府军蒙受重大挫败：反政府武装已进入叙北部最大城市阿勒颇](/articles/voa/1010655.md)
 
 11-30 [亲欧盟格鲁吉亚民众抗议示威持续，当局称又逮捕100多名示威者](/articles/voa/1010656.md)
@@ -596,8 +600,4 @@
 11-19 [俄罗斯大规模空袭造成乌克兰苏梅市11人死亡、89人受伤](/articles/voa/1010951.md)
 
 11-19 [美菲签署军事情报共享协议，为美提供更先进武器铺路](/articles/voa/1010952.md)
-
-11-18 [荷兰外相：中俄贸易助推战争，直接影响欧洲安全](/articles/voa/1010953.md)
-
-11-18 [赖清德：台湾欲与欧盟打造更强健“民主保护伞”并洽签“经济伙伴协定”](/articles/voa/1010954.md)
 
