--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-1 [读宋史的赵大胖｜借着吴柳芳“擦边”视频，聊几个被恶意淹没的常识](/articles/cdt/334977.md)
+
 12-1 [每日一语 2024.11.29](/articles/cdt/334980.md)
 
 12-1 [【CDT关注】中国媒体人董郁玉因“间谍罪”判刑七年，家属声明中文翻译](/articles/cdt/334982.md)
@@ -598,6 +600,4 @@
 10-24 [【网络民议】明明是反社会的献忠事件，怎么成了酒驾？](/articles/cdt/336143.md)
 
 10-24 [每日一语 2024.10.23](/articles/cdt/336145.md)
-
-10-24 [【CDT关注】WOMEN我们｜软肋](/articles/cdt/336151.md)
 
