--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-1 [特朗普拟提名忠实盟友卡什·帕特尔出任FBI局长](/articles/voa/1010645.md)
+
 12-1 [台湾总统抵达夏威夷，开始对南太平洋进行访问](/articles/voa/1010646.md)
 
 12-1 [消息来源称 当选总统特朗普寻求匈牙利总理欧尔班对乌克兰战争的看法](/articles/voa/1010647.md)
@@ -598,6 +600,4 @@
 11-19 [珠海惨案后中国排查“八失人员” 将社会不稳定归咎边缘群体被指本末倒置](/articles/voa/1010943.md)
 
 11-19 [二十国集团对乌克兰的共识出现裂痕，美国同时加紧援助](/articles/voa/1010944.md)
-
-11-19 [对乌克兰来说，美国批准使用远程导弹标志着战略性的转变](/articles/voa/1010945.md)
 
