--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-1 [赖清德过境夏威夷 强调和平无价](/articles/dw/1023541.md)
+
 12-1 [研究：2040年之前 德国每年需引入28.8万外籍劳工](/articles/dw/1023542.md)
 
 12-1 [德国大厂爆裁员潮 景气面临寒冬](/articles/dw/1023543.md)
@@ -598,6 +600,4 @@
 10-31 [人質交換? 美媒：華府釋放中國公民換林大衛自由](/articles/dw/1023839.md)
 
 10-31 [外企再出事？阿斯利康中國區總裁遭調查](/articles/dw/1023840.md)
-
-10-30 [美军夏威夷演习 《纽时》:大国备战为台海](/articles/dw/1023841.md)
 
