--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-2 [欧盟高级官员上任首日突访基辅，展示对乌克兰坚定支持](/articles/voa/1010640.md)
+
 12-1 [拜登总统启程访问非洲，努力抗衡中国影响力](/articles/voa/1010641.md)
 
 12-1 [台湾总统过境美国之际，美日菲拟连手防止中国趁机扰台](/articles/voa/1010642.md)
@@ -598,6 +600,4 @@
 11-19 [“拜习会”最终场习近平再划台湾红线 专家：美一中政策难撼动](/articles/voa/1010938.md)
 
 11-19 [中国政府打压境内书店之际，中文书商在海外拓展事业](/articles/voa/1010939.md)
-
-11-19 [巴西G20峰会,拜登总统宣布“历史性”40亿美元援助贫困国家](/articles/voa/1010940.md)
 
