--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-2 [赖清德出访太平洋三国，将过境夏威夷和关岛](/articles/nyt/1042156.md)
+
 11-29 [“每个人都以为自己会死”：空难幸存者的创伤后遗症](/articles/nyt/1042157.md)
 
 11-29 [《光明日报》资深编辑董郁玉因“间谍罪”被判刑七年](/articles/nyt/1042158.md)
@@ -598,6 +600,4 @@
 8-22 [如何击败特朗普？贺锦丽和民主党找到了新策略](/articles/nyt/1042454.md)
 
 8-22 [取代中国成为世界工厂？印度需要更大更好的港口](/articles/nyt/1042455.md)
-
-8-22 [沃尔玛清仓京东股份，称将在中国专注山姆会员店等业务](/articles/nyt/1042456.md)
 
