--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-2 [卸任前改變態度 拜登宣布特赦兒子亨特](/articles/dw/1023537.md)
+
 12-1 [墙外文摘：金马奖，要为娄烨担忧吗？](/articles/dw/1023538.md)
 
 12-1 [着眼洛比托铁路走廊 拜登任内首次访非](/articles/dw/1023539.md)
@@ -598,6 +600,4 @@
 10-31 [中国留学生谎称美国公民投票后被拘留](/articles/dw/1023835.md)
 
 10-31 [支持解除美国对古巴封锁 阿根廷外长遭撤换](/articles/dw/1023836.md)
-
-10-31 [泽连斯基抱怨美国不守秘密、不兑现承诺](/articles/dw/1023837.md)
 
