--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-2 [美国谴责中国重判记者董郁玉，呼吁“立即无条件释放”](/articles/nyt/1042155.md)
+
 12-2 [赖清德出访太平洋三国，将过境夏威夷和关岛](/articles/nyt/1042156.md)
 
 11-29 [“每个人都以为自己会死”：空难幸存者的创伤后遗症](/articles/nyt/1042157.md)
@@ -598,6 +600,4 @@
 8-23 [对女性最危险的国度？印度女医生遭奸杀案再次引发愤怒](/articles/nyt/1042453.md)
 
 8-22 [如何击败特朗普？贺锦丽和民主党找到了新策略](/articles/nyt/1042454.md)
-
-8-22 [取代中国成为世界工厂？印度需要更大更好的港口](/articles/nyt/1042455.md)
 
