--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-2 [违背承诺赦免儿子，拜登“特朗普”化？](/articles/nyt/1042153.md)
+
 12-2 [特朗普批拜登外交“差劲”，但可能延续其政策](/articles/nyt/1042154.md)
 
 12-2 [美国谴责中国重判记者董郁玉，呼吁“立即无条件释放”](/articles/nyt/1042155.md)
@@ -598,6 +600,4 @@
 8-23 [新“香港故事”：港府如何用国家安全展览重塑城市记忆](/articles/nyt/1042451.md)
 
 8-23 [尼泊尔新总理推翻TikTok禁令，向中国示好](/articles/nyt/1042452.md)
-
-8-23 [对女性最危险的国度？印度女医生遭奸杀案再次引发愤怒](/articles/nyt/1042453.md)
 
