--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-2 [战争与地区冲突不断 全球100强军火商销售量提升](/articles/voa/1010628.md)
+
 12-2 [总理无视美国谴责之际 抗议活动在格鲁吉亚全国蔓延](/articles/voa/1010629.md)
 
 12-2 [尽管曾誓言不会，拜登在卸任前仍赦免了其子亨特](/articles/voa/1010630.md)
@@ -598,6 +600,4 @@
 11-20 [泽连斯基：朝鲜向俄罗斯派兵有可能增加到十万人](/articles/voa/1010926.md)
 
 11-20 [普京签署法令批准新版核战略，莫斯科称乌军对俄发射美制远程导弹](/articles/voa/1010927.md)
-
-11-20 [菲律宾总统马科斯：他和特朗普通了话，两人将很快会面](/articles/voa/1010928.md)
 
