--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-3 [中国“卫生巾之乱” 消费者信任度崩跌引发“全民测评”](/articles/voa/1010619.md)
+
 12-3 [古巴革命领导人劳尔·卡斯特罗、古巴国家主席迪亚斯-卡内尔会见中国国务委员王小洪](/articles/voa/1010620.md)
 
 12-3 [菲律宾总统对俄潜艇出现在菲专属经济区海域表示“非常忧虑”](/articles/voa/1010621.md)
@@ -598,6 +600,4 @@
 11-20 [中国的求职陷阱: 找不到工作的大学生成待宰羔羊](/articles/voa/1010917.md)
 
 11-20 [中国和巴基斯坦举行五年来的首次反恐演习](/articles/voa/1010918.md)
-
-11-20 [中国大学生毕业人数将达1222万 高失业率与学历内卷加剧社会焦虑](/articles/voa/1010919.md)
 
