--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+12-3 [拜登特赦儿子 中国借机抨击美国法治虚伪](/articles/voa/1010613.md)
+
+12-3 [罗马尼亚宪法法院在重新计票后确认第一轮总统选举有效](/articles/voa/1010614.md)
+
+12-3 [以色列-真主党停火基本维持，但一些战斗仍在继续](/articles/voa/1010615.md)
+
+12-3 [马来西亚犯罪率飙升，中国免签政策成关注焦点](/articles/voa/1010616.md)
+
 12-3 [美国：若再发生错误拘押美国公民事件，有关中国的旅行警告可能重新上调](/articles/voa/1010617.md)
 
 12-3 [中国与欧盟贸易关系紧张之际，制药巨头赛诺菲宣布在中国最大投资协议](/articles/voa/1010618.md)
@@ -592,12 +600,4 @@
 11-20 [美印太司令：美国对乌克兰和以色列的军援正在蚕食武器库存](/articles/voa/1010911.md)
 
 11-20 [美防长：美菲同盟关系超越政府换届](/articles/voa/1010912.md)
-
-11-20 [加拿大与美国共同担忧墨西哥与中国的贸易，同时可能进行贸易谈判](/articles/voa/1010913.md)
-
-11-20 [在华外企缩减产能、迁厂越南等国，因为特朗普关税将至？](/articles/voa/1010914.md)
-
-11-20 [习近平和朔尔茨在20国集团会议期间讨论双边关系和电动车](/articles/voa/1010915.md)
-
-11-20 [乌克兰首次使用美国远程导弹袭击俄罗斯境内，美官员证实原政策已改变](/articles/voa/1010916.md)
 
