--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-3 [每日一语 2024.12.2](/articles/cdt/334934.md)
+
 12-3 [地球公民金建国｜三十年前下海，三十年后上岸](/articles/cdt/334941.md)
 
 12-3 [风声OPINION｜医保个人账户可以给近亲属用了，但为什么效果有限？](/articles/cdt/334944.md)
@@ -34,6 +36,8 @@
 12-1 [先生制造｜老师，你要走了吗？](/articles/cdt/334984.md)
 
 12-1 [【CDT月度视频】十一月之声（2024）——“一路都被撞没了，估计一圈都没了”](/articles/cdt/334988.md)
+
+12-3 [【404文库】“不要躲，每一个人都是守门人”（外二篇）](/articles/cdt/334989.md)
 
 11-30 [基本常识｜仔细学习强迫劳动的定义后，我陷入了沉思](/articles/cdt/334998.md)
 
@@ -596,8 +600,4 @@
 10-26 [卖杏花｜教沙白白做人？](/articles/cdt/336085.md)
 
 10-27 [【CDT周报】第192期：他说共产党不让他活了，你们却说他喝多了](/articles/cdt/336087.md)
-
-10-25 [【CDT报告汇】布兰切特：习近平的“马克思主义”只想要列宁主义控制，而非共产主义理想（外二篇）](/articles/cdt/336093.md)
-
-10-25 [C计划｜从“抵制杨笠”到《再见爱人》，如何看待愤怒背后的三组理由？](/articles/cdt/336095.md)
 
