--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-3 [土耳其要求叙利亚政府与反对派和解停止冲突](/articles/voa/1010611.md)
+
+12-3 [德国外长敦促中国停止支持俄罗斯并致力于乌克兰和平](/articles/voa/1010612.md)
+
 12-3 [拜登特赦儿子 中国借机抨击美国法治虚伪](/articles/voa/1010613.md)
 
 12-3 [罗马尼亚宪法法院在重新计票后确认第一轮总统选举有效](/articles/voa/1010614.md)
@@ -596,8 +600,4 @@
 11-20 [G20峰会闭幕，突出全球南方议题](/articles/voa/1010909.md)
 
 11-20 [取消中国永久正常贸易关系地位，启动AI“曼哈顿计划”：USCC年度报告亮点一览](/articles/voa/1010910.md)
-
-11-20 [美印太司令：美国对乌克兰和以色列的军援正在蚕食武器库存](/articles/voa/1010911.md)
-
-11-20 [美防长：美菲同盟关系超越政府换届](/articles/voa/1010912.md)
 
