--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-3 [中美换囚协议背后的秘密行动：三名维吾尔人获准离开中国](/articles/nyt/1042152.md)
+
 12-2 [违背承诺赦免儿子，拜登“特朗普”化？](/articles/nyt/1042153.md)
 
 12-2 [特朗普批拜登外交“差劲”，但可能延续其政策](/articles/nyt/1042154.md)
@@ -598,6 +600,4 @@
 8-23 [为何人人都爱Costco](/articles/nyt/1042450.md)
 
 8-23 [新“香港故事”：港府如何用国家安全展览重塑城市记忆](/articles/nyt/1042451.md)
-
-8-23 [尼泊尔新总理推翻TikTok禁令，向中国示好](/articles/nyt/1042452.md)
 
