--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+12-3 [台湾总统赖清德抵达马绍尔群岛](/articles/voa/1010606.md)
+
+12-3 [印尼外长：印尼依然不承认中国对南中国海的主权主张](/articles/voa/1010607.md)
+
+12-3 [专家：美国最新对华半导体制裁可能会真正损害中国打造世界级国内芯片制造业的努力](/articles/voa/1010608.md)
+
+12-3 [美批准最新一批对台军售，美商界称有助应对中国灰色骚扰](/articles/voa/1010609.md)
+
+12-3 [经两年调查后，美议员支持新冠病毒由中国实验室泄露的理论](/articles/voa/1010610.md)
+
 12-3 [土耳其要求叙利亚政府与反对派和解停止冲突](/articles/voa/1010611.md)
 
 12-3 [德国外长敦促中国停止支持俄罗斯并致力于乌克兰和平](/articles/voa/1010612.md)
@@ -590,14 +600,4 @@
 11-20 [香港传媒大亨黎智英首次在国安审讯中作证 否认请求外国制裁中港](/articles/voa/1010904.md)
 
 11-20 [乌克兰发射美国远程导弹后 俄罗斯誓言做出回应](/articles/voa/1010905.md)
-
-11-20 [特朗普提名对华强硬派霍华德·卢特尼克为美国商务部长](/articles/voa/1010906.md)
-
-11-20 [港府判民主派人士入狱 佩洛西与史密斯痛批“荒谬”判决](/articles/voa/1010907.md)
-
-11-20 [美国政府进入交接过渡期 美台外交官盘点双边关系进展与前景](/articles/voa/1010908.md)
-
-11-20 [G20峰会闭幕，突出全球南方议题](/articles/voa/1010909.md)
-
-11-20 [取消中国永久正常贸易关系地位，启动AI“曼哈顿计划”：USCC年度报告亮点一览](/articles/voa/1010910.md)
 
