--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-3 [每日一语 2024.12.1](/articles/cdt/334932.md)
+
 12-3 [每日一语 2024.12.2](/articles/cdt/334934.md)
 
 12-3 [地球公民金建国｜三十年前下海，三十年后上岸](/articles/cdt/334941.md)
@@ -598,6 +600,4 @@
 10-26 [劳务宏观笔记｜回不去的故乡，三季度外出农民工首次超过1.9亿](/articles/cdt/336084.md)
 
 10-26 [卖杏花｜教沙白白做人？](/articles/cdt/336085.md)
-
-10-27 [【CDT周报】第192期：他说共产党不让他活了，你们却说他喝多了](/articles/cdt/336087.md)
 
