--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-3 [特朗普关税威胁引发加拿大和墨西哥在边境安全问题上的分歧](/articles/voa/1010605.md)
+
 12-3 [台湾总统赖清德抵达马绍尔群岛](/articles/voa/1010606.md)
 
 12-3 [印尼外长：印尼依然不承认中国对南中国海的主权主张](/articles/voa/1010607.md)
@@ -598,6 +600,4 @@
 11-20 [“全球南方”为特朗普上台做准备 习近平会晤阿根廷与巴西总统](/articles/voa/1010903.md)
 
 11-20 [香港传媒大亨黎智英首次在国安审讯中作证 否认请求外国制裁中港](/articles/voa/1010904.md)
-
-11-20 [乌克兰发射美国远程导弹后 俄罗斯誓言做出回应](/articles/voa/1010905.md)
 
