--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-3 [叙利亚内战中几个重要的“为什么”](/articles/dw/1023526.md)
+
 12-3 [天下不太平 全球军火交易火爆](/articles/dw/1023527.md)
 
 12-3 [金砖国家货币：特朗普的关税威胁合理吗？](/articles/dw/1023528.md)
@@ -598,6 +600,4 @@
 11-1 [记录台北：锦州街上的东北水饺](/articles/dw/1023824.md)
 
 11-1 [德国宣布关闭伊朗驻德三个领事馆](/articles/dw/1023825.md)
-
-11-1 [纪录台北：锦州街上的东北水饺](/articles/dw/1023826.md)
 
