--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,11 +3,17 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-4 [劳务宏观笔记｜三年是多久？](/articles/cdt/334905.md)
+
 12-3 [【404文库】 经济人读书会｜高善文：2025年可能是一个重要的转折点](/articles/cdt/334917.md)
+
+12-4 [【404文库】新新默存｜王五四：在逼良为娼的社会里，人人都爱劝人从良](/articles/cdt/334922.md)
 
 12-3 [老萧杂说｜吴柳芳解禁后粉丝飚涨输出的信号](/articles/cdt/334925.md)
 
 12-3 [【异闻观止】中国人口报｜高校要发挥婚恋教育主阵地作用](/articles/cdt/334927.md)
+
+12-4 [【404文库】老干体v｜他们怎么就不信我们，反对纳入CPTPP？](/articles/cdt/334929.md)
 
 12-3 [每日一语 2024.12.1](/articles/cdt/334932.md)
 
@@ -594,10 +600,4 @@
 10-26 [【CDTV】【图说天朝】2023万圣节被诊断为新的错误记忆？](/articles/cdt/336066.md)
 
 10-26 [【404文库】倪刃｜一个叫沙白的女孩儿决定去安乐死](/articles/cdt/336068.md)
-
-10-26 [【网络民议】知乎问答｜为什么恨国党觉得出去就能活得比中国更好呢？](/articles/cdt/336071.md)
-
-10-26 [猛犸工作室｜高位买房的人，选择与自己和解](/articles/cdt/336077.md)
-
-10-26 [每日一语 2024.10.25](/articles/cdt/336080.md)
 
