--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-4 [德外长指控中国军援俄罗斯 北京为何收起“战狼式”反应?](/articles/voa/1010595.md)
+
+12-4 [印中边界军事对峙化解后，新德里表示准备考虑发展双边经贸关系](/articles/voa/1010596.md)
+
 12-3 [韩国总统尹锡悦突然宣布实施紧急戒严令](/articles/voa/1010597.md)
 
 12-3 [法塔赫与哈马斯达成协议组建战后加沙管理机构](/articles/voa/1010598.md)
@@ -596,8 +600,4 @@
 11-21 [防范“潜在重大空袭”，美国关闭驻基辅大使馆，告诫美公民注意躲避空袭](/articles/voa/1010893.md)
 
 11-21 [香港传媒大亨黎智英国安案首次亲自出庭作供 市民连日通宵排队旁听支持](/articles/voa/1010894.md)
-
-11-21 [台海局势紧张，台湾人涌向新马置产：柔佛经济特区成避险与移民首选](/articles/voa/1010895.md)
-
-11-21 [俄乌相互发动大规模无人机攻击，美将向乌提供反步兵地雷](/articles/voa/1010896.md)
 
