--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-4 [韩国国会表决通过解除紧急戒严](/articles/dw/1023517.md)
+
+12-4 [韩国国会表决通过关于要求解除紧急戒严决议案](/articles/dw/1023518.md)
+
 12-4 [抨击《布达佩斯备忘录》 乌克兰称唯一安全保障是加入北约](/articles/dw/1023519.md)
 
 12-3 [特朗普称将“阻止”新日铁收购美国钢铁公司](/articles/dw/1023520.md)
@@ -596,8 +600,4 @@
 11-2 [关于朝鲜派兵赴俄 这些你不得不知](/articles/dw/1023815.md)
 
 11-2 [“兄弟情谊”不断升温 欧尔班准备开香槟贺特朗普胜选](/articles/dw/1023816.md)
-
-11-2 [流行歌手带动文化现象“brat”成为柯林斯词典年度热词](/articles/dw/1023817.md)
-
-11-1 [德国宣布关闭伊朗驻德领事馆 伊朗强烈抗议](/articles/dw/1023818.md)
 
